// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publish Test File via Babel: cjs 1`] = `
"/*! deep-lodash v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var commonjsGlobal = typeof globalThis !== 'undefined' ? globalThis : typeof window !== 'undefined' ? window : typeof global !== 'undefined' ? global : typeof self !== 'undefined' ? self : {};

/** Detect free variable \`global\` from Node.js. */
var freeGlobal$1 = typeof commonjsGlobal == 'object' && commonjsGlobal && commonjsGlobal.Object === Object && commonjsGlobal;
var _freeGlobal = freeGlobal$1;

var freeGlobal = _freeGlobal;
/** Detect free variable \`self\`. */

var freeSelf = typeof self == 'object' && self && self.Object === Object && self;
/** Used as a reference to the global object. */

var root$1 = freeGlobal || freeSelf || Function('return this')();
var _root = root$1;

var root = _root;
/** Built-in value references. */

var Symbol$3 = root.Symbol;
var _Symbol = Symbol$3;

/**
 * A specialized version of \`_.map\` for arrays without support for iteratee
 * shorthands.
 *
 * @private
 * @param {Array} [array] The array to iterate over.
 * @param {Function} iteratee The function invoked per iteration.
 * @returns {Array} Returns the new mapped array.
 */

function arrayMap$1(array, iteratee) {
  var index = -1,
      length = array == null ? 0 : array.length,
      result = Array(length);

  while (++index < length) {
    result[index] = iteratee(array[index], index, array);
  }

  return result;
}

var _arrayMap = arrayMap$1;

/**
 * Checks if \`value\` is classified as an \`Array\` object.
 *
 * @static
 * @memberOf _
 * @since 0.1.0
 * @category Lang
 * @param {*} value The value to check.
 * @returns {boolean} Returns \`true\` if \`value\` is an array, else \`false\`.
 * @example
 *
 * _.isArray([1, 2, 3]);
 * // => true
 *
 * _.isArray(document.body.children);
 * // => false
 *
 * _.isArray('abc');
 * // => false
 *
 * _.isArray(_.noop);
 * // => false
 */
var isArray$1 = Array.isArray;
var isArray_1 = isArray$1;

var Symbol$2 = _Symbol;
/** Used for built-in method references. */

var objectProto$1 = Object.prototype;
/** Used to check objects for own properties. */

var hasOwnProperty = objectProto$1.hasOwnProperty;
/**
 * Used to resolve the
 * [\`toStringTag\`](http://ecma-international.org/ecma-262/7.0/#sec-object.prototype.tostring)
 * of values.
 */

var nativeObjectToString$1 = objectProto$1.toString;
/** Built-in value references. */

var symToStringTag$1 = Symbol$2 ? Symbol$2.toStringTag : undefined;
/**
 * A specialized version of \`baseGetTag\` which ignores \`Symbol.toStringTag\` values.
 *
 * @private
 * @param {*} value The value to query.
 * @returns {string} Returns the raw \`toStringTag\`.
 */

function getRawTag$1(value) {
  var isOwn = hasOwnProperty.call(value, symToStringTag$1),
      tag = value[symToStringTag$1];

  try {
    value[symToStringTag$1] = undefined;
    var unmasked = true;
  } catch (e) {}

  var result = nativeObjectToString$1.call(value);

  if (unmasked) {
    if (isOwn) {
      value[symToStringTag$1] = tag;
    } else {
      delete value[symToStringTag$1];
    }
  }

  return result;
}

var _getRawTag = getRawTag$1;

/** Used for built-in method references. */
var objectProto = Object.prototype;
/**
 * Used to resolve the
 * [\`toStringTag\`](http://ecma-international.org/ecma-262/7.0/#sec-object.prototype.tostring)
 * of values.
 */

var nativeObjectToString = objectProto.toString;
/**
 * Converts \`value\` to a string using \`Object.prototype.toString\`.
 *
 * @private
 * @param {*} value The value to convert.
 * @returns {string} Returns the converted string.
 */

function objectToString$1(value) {
  return nativeObjectToString.call(value);
}

var _objectToString = objectToString$1;

var Symbol$1 = _Symbol,
    getRawTag = _getRawTag,
    objectToString = _objectToString;
/** \`Object#toString\` result references. */

var nullTag = '[object Null]',
    undefinedTag = '[object Undefined]';
/** Built-in value references. */

var symToStringTag = Symbol$1 ? Symbol$1.toStringTag : undefined;
/**
 * The base implementation of \`getTag\` without fallbacks for buggy environments.
 *
 * @private
 * @param {*} value The value to query.
 * @returns {string} Returns the \`toStringTag\`.
 */

function baseGetTag$1(value) {
  if (value == null) {
    return value === undefined ? undefinedTag : nullTag;
  }

  return symToStringTag && symToStringTag in Object(value) ? getRawTag(value) : objectToString(value);
}

var _baseGetTag = baseGetTag$1;

/**
 * Checks if \`value\` is object-like. A value is object-like if it's not \`null\`
 * and has a \`typeof\` result of \\"object\\".
 *
 * @static
 * @memberOf _
 * @since 4.0.0
 * @category Lang
 * @param {*} value The value to check.
 * @returns {boolean} Returns \`true\` if \`value\` is object-like, else \`false\`.
 * @example
 *
 * _.isObjectLike({});
 * // => true
 *
 * _.isObjectLike([1, 2, 3]);
 * // => true
 *
 * _.isObjectLike(_.noop);
 * // => false
 *
 * _.isObjectLike(null);
 * // => false
 */

function isObjectLike$1(value) {
  return value != null && typeof value == 'object';
}

var isObjectLike_1 = isObjectLike$1;

var baseGetTag = _baseGetTag,
    isObjectLike = isObjectLike_1;
/** \`Object#toString\` result references. */

var symbolTag = '[object Symbol]';
/**
 * Checks if \`value\` is classified as a \`Symbol\` primitive or object.
 *
 * @static
 * @memberOf _
 * @since 4.0.0
 * @category Lang
 * @param {*} value The value to check.
 * @returns {boolean} Returns \`true\` if \`value\` is a symbol, else \`false\`.
 * @example
 *
 * _.isSymbol(Symbol.iterator);
 * // => true
 *
 * _.isSymbol('abc');
 * // => false
 */

function isSymbol$1(value) {
  return typeof value == 'symbol' || isObjectLike(value) && baseGetTag(value) == symbolTag;
}

var isSymbol_1 = isSymbol$1;

var Symbol = _Symbol,
    arrayMap = _arrayMap,
    isArray = isArray_1,
    isSymbol = isSymbol_1;
/** Used as references for various \`Number\` constants. */

var INFINITY = 1 / 0;
/** Used to convert symbols to primitives and strings. */

var symbolProto = Symbol ? Symbol.prototype : undefined,
    symbolToString = symbolProto ? symbolProto.toString : undefined;
/**
 * The base implementation of \`_.toString\` which doesn't convert nullish
 * values to empty strings.
 *
 * @private
 * @param {*} value The value to process.
 * @returns {string} Returns the string.
 */

function baseToString$1(value) {
  // Exit early for strings to avoid a performance hit in some environments.
  if (typeof value == 'string') {
    return value;
  }

  if (isArray(value)) {
    // Recursively convert values (susceptible to call stack limits).
    return arrayMap(value, baseToString$1) + '';
  }

  if (isSymbol(value)) {
    return symbolToString ? symbolToString.call(value) : '';
  }

  var result = value + '';
  return result == '0' && 1 / value == -INFINITY ? '-0' : result;
}

var _baseToString = baseToString$1;

var baseToString = _baseToString;
/**
 * Converts \`value\` to a string. An empty string is returned for \`null\`
 * and \`undefined\` values. The sign of \`-0\` is preserved.
 *
 * @static
 * @memberOf _
 * @since 4.0.0
 * @category Lang
 * @param {*} value The value to convert.
 * @returns {string} Returns the converted string.
 * @example
 *
 * _.toString(null);
 * // => ''
 *
 * _.toString(-0);
 * // => '-0'
 *
 * _.toString([1, 2, 3]);
 * // => '1,2,3'
 */

function toString$4(value) {
  return value == null ? '' : baseToString(value);
}

var toString_1 = toString$4;

/**
 * The base implementation of \`_.slice\` without an iteratee call guard.
 *
 * @private
 * @param {Array} array The array to slice.
 * @param {number} [start=0] The start position.
 * @param {number} [end=array.length] The end position.
 * @returns {Array} Returns the slice of \`array\`.
 */

function baseSlice$1(array, start, end) {
  var index = -1,
      length = array.length;

  if (start < 0) {
    start = -start > length ? 0 : length + start;
  }

  end = end > length ? length : end;

  if (end < 0) {
    end += length;
  }

  length = start > end ? 0 : end - start >>> 0;
  start >>>= 0;
  var result = Array(length);

  while (++index < length) {
    result[index] = array[index + start];
  }

  return result;
}

var _baseSlice = baseSlice$1;

var baseSlice = _baseSlice;
/**
 * Casts \`array\` to a slice if it's needed.
 *
 * @private
 * @param {Array} array The array to inspect.
 * @param {number} start The start position.
 * @param {number} [end=array.length] The end position.
 * @returns {Array} Returns the cast slice.
 */

function castSlice$1(array, start, end) {
  var length = array.length;
  end = end === undefined ? length : end;
  return !start && end >= length ? array : baseSlice(array, start, end);
}

var _castSlice = castSlice$1;

/** Used to compose unicode character classes. */
var rsAstralRange$2 = '\\\\\\\\ud800-\\\\\\\\udfff',
    rsComboMarksRange$3 = '\\\\\\\\u0300-\\\\\\\\u036f',
    reComboHalfMarksRange$3 = '\\\\\\\\ufe20-\\\\\\\\ufe2f',
    rsComboSymbolsRange$3 = '\\\\\\\\u20d0-\\\\\\\\u20ff',
    rsComboRange$3 = rsComboMarksRange$3 + reComboHalfMarksRange$3 + rsComboSymbolsRange$3,
    rsVarRange$2 = '\\\\\\\\ufe0e\\\\\\\\ufe0f';
/** Used to compose unicode capture groups. */

var rsZWJ$2 = '\\\\\\\\u200d';
/** Used to detect strings with [zero-width joiners or code points from the astral planes](http://eev.ee/blog/2015/09/12/dark-corners-of-unicode/). */

var reHasUnicode = RegExp('[' + rsZWJ$2 + rsAstralRange$2 + rsComboRange$3 + rsVarRange$2 + ']');
/**
 * Checks if \`string\` contains Unicode symbols.
 *
 * @private
 * @param {string} string The string to inspect.
 * @returns {boolean} Returns \`true\` if a symbol is found, else \`false\`.
 */

function hasUnicode$2(string) {
  return reHasUnicode.test(string);
}

var _hasUnicode = hasUnicode$2;

/**
 * Converts an ASCII \`string\` to an array.
 *
 * @private
 * @param {string} string The string to convert.
 * @returns {Array} Returns the converted array.
 */

function asciiToArray$1(string) {
  return string.split('');
}

var _asciiToArray = asciiToArray$1;

/** Used to compose unicode character classes. */
var rsAstralRange$1 = '\\\\\\\\ud800-\\\\\\\\udfff',
    rsComboMarksRange$2 = '\\\\\\\\u0300-\\\\\\\\u036f',
    reComboHalfMarksRange$2 = '\\\\\\\\ufe20-\\\\\\\\ufe2f',
    rsComboSymbolsRange$2 = '\\\\\\\\u20d0-\\\\\\\\u20ff',
    rsComboRange$2 = rsComboMarksRange$2 + reComboHalfMarksRange$2 + rsComboSymbolsRange$2,
    rsVarRange$1 = '\\\\\\\\ufe0e\\\\\\\\ufe0f';
/** Used to compose unicode capture groups. */

var rsAstral = '[' + rsAstralRange$1 + ']',
    rsCombo$2 = '[' + rsComboRange$2 + ']',
    rsFitz$1 = '\\\\\\\\ud83c[\\\\\\\\udffb-\\\\\\\\udfff]',
    rsModifier$1 = '(?:' + rsCombo$2 + '|' + rsFitz$1 + ')',
    rsNonAstral$1 = '[^' + rsAstralRange$1 + ']',
    rsRegional$1 = '(?:\\\\\\\\ud83c[\\\\\\\\udde6-\\\\\\\\uddff]){2}',
    rsSurrPair$1 = '[\\\\\\\\ud800-\\\\\\\\udbff][\\\\\\\\udc00-\\\\\\\\udfff]',
    rsZWJ$1 = '\\\\\\\\u200d';
/** Used to compose unicode regexes. */

var reOptMod$1 = rsModifier$1 + '?',
    rsOptVar$1 = '[' + rsVarRange$1 + ']?',
    rsOptJoin$1 = '(?:' + rsZWJ$1 + '(?:' + [rsNonAstral$1, rsRegional$1, rsSurrPair$1].join('|') + ')' + rsOptVar$1 + reOptMod$1 + ')*',
    rsSeq$1 = rsOptVar$1 + reOptMod$1 + rsOptJoin$1,
    rsSymbol = '(?:' + [rsNonAstral$1 + rsCombo$2 + '?', rsCombo$2, rsRegional$1, rsSurrPair$1, rsAstral].join('|') + ')';
/** Used to match [string symbols](https://mathiasbynens.be/notes/javascript-unicode). */

var reUnicode = RegExp(rsFitz$1 + '(?=' + rsFitz$1 + ')|' + rsSymbol + rsSeq$1, 'g');
/**
 * Converts a Unicode \`string\` to an array.
 *
 * @private
 * @param {string} string The string to convert.
 * @returns {Array} Returns the converted array.
 */

function unicodeToArray$1(string) {
  return string.match(reUnicode) || [];
}

var _unicodeToArray = unicodeToArray$1;

var asciiToArray = _asciiToArray,
    hasUnicode$1 = _hasUnicode,
    unicodeToArray = _unicodeToArray;
/**
 * Converts \`string\` to an array.
 *
 * @private
 * @param {string} string The string to convert.
 * @returns {Array} Returns the converted array.
 */

function stringToArray$1(string) {
  return hasUnicode$1(string) ? unicodeToArray(string) : asciiToArray(string);
}

var _stringToArray = stringToArray$1;

var castSlice = _castSlice,
    hasUnicode = _hasUnicode,
    stringToArray = _stringToArray,
    toString$3 = toString_1;
/**
 * Creates a function like \`_.lowerFirst\`.
 *
 * @private
 * @param {string} methodName The name of the \`String\` case method to use.
 * @returns {Function} Returns the new case function.
 */

function createCaseFirst$1(methodName) {
  return function (string) {
    string = toString$3(string);
    var strSymbols = hasUnicode(string) ? stringToArray(string) : undefined;
    var chr = strSymbols ? strSymbols[0] : string.charAt(0);
    var trailing = strSymbols ? castSlice(strSymbols, 1).join('') : string.slice(1);
    return chr[methodName]() + trailing;
  };
}

var _createCaseFirst = createCaseFirst$1;

var createCaseFirst = _createCaseFirst;
/**
 * Converts the first character of \`string\` to upper case.
 *
 * @static
 * @memberOf _
 * @since 4.0.0
 * @category String
 * @param {string} [string=''] The string to convert.
 * @returns {string} Returns the converted string.
 * @example
 *
 * _.upperFirst('fred');
 * // => 'Fred'
 *
 * _.upperFirst('FRED');
 * // => 'FRED'
 */

var upperFirst$1 = createCaseFirst('toUpperCase');
var upperFirst_1 = upperFirst$1;

var toString$2 = toString_1,
    upperFirst = upperFirst_1;
/**
 * Converts the first character of \`string\` to upper case and the remaining
 * to lower case.
 *
 * @static
 * @memberOf _
 * @since 3.0.0
 * @category String
 * @param {string} [string=''] The string to capitalize.
 * @returns {string} Returns the capitalized string.
 * @example
 *
 * _.capitalize('FRED');
 * // => 'Fred'
 */

function capitalize$1(string) {
  return upperFirst(toString$2(string).toLowerCase());
}

var capitalize_1 = capitalize$1;

/**
 * A specialized version of \`_.reduce\` for arrays without support for
 * iteratee shorthands.
 *
 * @private
 * @param {Array} [array] The array to iterate over.
 * @param {Function} iteratee The function invoked per iteration.
 * @param {*} [accumulator] The initial value.
 * @param {boolean} [initAccum] Specify using the first element of \`array\` as
 *  the initial value.
 * @returns {*} Returns the accumulated value.
 */

function arrayReduce$1(array, iteratee, accumulator, initAccum) {
  var index = -1,
      length = array == null ? 0 : array.length;

  if (initAccum && length) {
    accumulator = array[++index];
  }

  while (++index < length) {
    accumulator = iteratee(accumulator, array[index], index, array);
  }

  return accumulator;
}

var _arrayReduce = arrayReduce$1;

/**
 * The base implementation of \`_.propertyOf\` without support for deep paths.
 *
 * @private
 * @param {Object} object The object to query.
 * @returns {Function} Returns the new accessor function.
 */

function basePropertyOf$1(object) {
  return function (key) {
    return object == null ? undefined : object[key];
  };
}

var _basePropertyOf = basePropertyOf$1;

var basePropertyOf = _basePropertyOf;
/** Used to map Latin Unicode letters to basic Latin letters. */

var deburredLetters = {
  // Latin-1 Supplement block.
  '\\\\xc0': 'A',
  '\\\\xc1': 'A',
  '\\\\xc2': 'A',
  '\\\\xc3': 'A',
  '\\\\xc4': 'A',
  '\\\\xc5': 'A',
  '\\\\xe0': 'a',
  '\\\\xe1': 'a',
  '\\\\xe2': 'a',
  '\\\\xe3': 'a',
  '\\\\xe4': 'a',
  '\\\\xe5': 'a',
  '\\\\xc7': 'C',
  '\\\\xe7': 'c',
  '\\\\xd0': 'D',
  '\\\\xf0': 'd',
  '\\\\xc8': 'E',
  '\\\\xc9': 'E',
  '\\\\xca': 'E',
  '\\\\xcb': 'E',
  '\\\\xe8': 'e',
  '\\\\xe9': 'e',
  '\\\\xea': 'e',
  '\\\\xeb': 'e',
  '\\\\xcc': 'I',
  '\\\\xcd': 'I',
  '\\\\xce': 'I',
  '\\\\xcf': 'I',
  '\\\\xec': 'i',
  '\\\\xed': 'i',
  '\\\\xee': 'i',
  '\\\\xef': 'i',
  '\\\\xd1': 'N',
  '\\\\xf1': 'n',
  '\\\\xd2': 'O',
  '\\\\xd3': 'O',
  '\\\\xd4': 'O',
  '\\\\xd5': 'O',
  '\\\\xd6': 'O',
  '\\\\xd8': 'O',
  '\\\\xf2': 'o',
  '\\\\xf3': 'o',
  '\\\\xf4': 'o',
  '\\\\xf5': 'o',
  '\\\\xf6': 'o',
  '\\\\xf8': 'o',
  '\\\\xd9': 'U',
  '\\\\xda': 'U',
  '\\\\xdb': 'U',
  '\\\\xdc': 'U',
  '\\\\xf9': 'u',
  '\\\\xfa': 'u',
  '\\\\xfb': 'u',
  '\\\\xfc': 'u',
  '\\\\xdd': 'Y',
  '\\\\xfd': 'y',
  '\\\\xff': 'y',
  '\\\\xc6': 'Ae',
  '\\\\xe6': 'ae',
  '\\\\xde': 'Th',
  '\\\\xfe': 'th',
  '\\\\xdf': 'ss',
  // Latin Extended-A block.
  '\\\\u0100': 'A',
  '\\\\u0102': 'A',
  '\\\\u0104': 'A',
  '\\\\u0101': 'a',
  '\\\\u0103': 'a',
  '\\\\u0105': 'a',
  '\\\\u0106': 'C',
  '\\\\u0108': 'C',
  '\\\\u010a': 'C',
  '\\\\u010c': 'C',
  '\\\\u0107': 'c',
  '\\\\u0109': 'c',
  '\\\\u010b': 'c',
  '\\\\u010d': 'c',
  '\\\\u010e': 'D',
  '\\\\u0110': 'D',
  '\\\\u010f': 'd',
  '\\\\u0111': 'd',
  '\\\\u0112': 'E',
  '\\\\u0114': 'E',
  '\\\\u0116': 'E',
  '\\\\u0118': 'E',
  '\\\\u011a': 'E',
  '\\\\u0113': 'e',
  '\\\\u0115': 'e',
  '\\\\u0117': 'e',
  '\\\\u0119': 'e',
  '\\\\u011b': 'e',
  '\\\\u011c': 'G',
  '\\\\u011e': 'G',
  '\\\\u0120': 'G',
  '\\\\u0122': 'G',
  '\\\\u011d': 'g',
  '\\\\u011f': 'g',
  '\\\\u0121': 'g',
  '\\\\u0123': 'g',
  '\\\\u0124': 'H',
  '\\\\u0126': 'H',
  '\\\\u0125': 'h',
  '\\\\u0127': 'h',
  '\\\\u0128': 'I',
  '\\\\u012a': 'I',
  '\\\\u012c': 'I',
  '\\\\u012e': 'I',
  '\\\\u0130': 'I',
  '\\\\u0129': 'i',
  '\\\\u012b': 'i',
  '\\\\u012d': 'i',
  '\\\\u012f': 'i',
  '\\\\u0131': 'i',
  '\\\\u0134': 'J',
  '\\\\u0135': 'j',
  '\\\\u0136': 'K',
  '\\\\u0137': 'k',
  '\\\\u0138': 'k',
  '\\\\u0139': 'L',
  '\\\\u013b': 'L',
  '\\\\u013d': 'L',
  '\\\\u013f': 'L',
  '\\\\u0141': 'L',
  '\\\\u013a': 'l',
  '\\\\u013c': 'l',
  '\\\\u013e': 'l',
  '\\\\u0140': 'l',
  '\\\\u0142': 'l',
  '\\\\u0143': 'N',
  '\\\\u0145': 'N',
  '\\\\u0147': 'N',
  '\\\\u014a': 'N',
  '\\\\u0144': 'n',
  '\\\\u0146': 'n',
  '\\\\u0148': 'n',
  '\\\\u014b': 'n',
  '\\\\u014c': 'O',
  '\\\\u014e': 'O',
  '\\\\u0150': 'O',
  '\\\\u014d': 'o',
  '\\\\u014f': 'o',
  '\\\\u0151': 'o',
  '\\\\u0154': 'R',
  '\\\\u0156': 'R',
  '\\\\u0158': 'R',
  '\\\\u0155': 'r',
  '\\\\u0157': 'r',
  '\\\\u0159': 'r',
  '\\\\u015a': 'S',
  '\\\\u015c': 'S',
  '\\\\u015e': 'S',
  '\\\\u0160': 'S',
  '\\\\u015b': 's',
  '\\\\u015d': 's',
  '\\\\u015f': 's',
  '\\\\u0161': 's',
  '\\\\u0162': 'T',
  '\\\\u0164': 'T',
  '\\\\u0166': 'T',
  '\\\\u0163': 't',
  '\\\\u0165': 't',
  '\\\\u0167': 't',
  '\\\\u0168': 'U',
  '\\\\u016a': 'U',
  '\\\\u016c': 'U',
  '\\\\u016e': 'U',
  '\\\\u0170': 'U',
  '\\\\u0172': 'U',
  '\\\\u0169': 'u',
  '\\\\u016b': 'u',
  '\\\\u016d': 'u',
  '\\\\u016f': 'u',
  '\\\\u0171': 'u',
  '\\\\u0173': 'u',
  '\\\\u0174': 'W',
  '\\\\u0175': 'w',
  '\\\\u0176': 'Y',
  '\\\\u0177': 'y',
  '\\\\u0178': 'Y',
  '\\\\u0179': 'Z',
  '\\\\u017b': 'Z',
  '\\\\u017d': 'Z',
  '\\\\u017a': 'z',
  '\\\\u017c': 'z',
  '\\\\u017e': 'z',
  '\\\\u0132': 'IJ',
  '\\\\u0133': 'ij',
  '\\\\u0152': 'Oe',
  '\\\\u0153': 'oe',
  '\\\\u0149': \\"'n\\",
  '\\\\u017f': 's'
};
/**
 * Used by \`_.deburr\` to convert Latin-1 Supplement and Latin Extended-A
 * letters to basic Latin letters.
 *
 * @private
 * @param {string} letter The matched letter to deburr.
 * @returns {string} Returns the deburred letter.
 */

var deburrLetter$1 = basePropertyOf(deburredLetters);
var _deburrLetter = deburrLetter$1;

var deburrLetter = _deburrLetter,
    toString$1 = toString_1;
/** Used to match Latin Unicode letters (excluding mathematical operators). */

var reLatin = /[\\\\xc0-\\\\xd6\\\\xd8-\\\\xf6\\\\xf8-\\\\xff\\\\u0100-\\\\u017f]/g;
/** Used to compose unicode character classes. */

var rsComboMarksRange$1 = '\\\\\\\\u0300-\\\\\\\\u036f',
    reComboHalfMarksRange$1 = '\\\\\\\\ufe20-\\\\\\\\ufe2f',
    rsComboSymbolsRange$1 = '\\\\\\\\u20d0-\\\\\\\\u20ff',
    rsComboRange$1 = rsComboMarksRange$1 + reComboHalfMarksRange$1 + rsComboSymbolsRange$1;
/** Used to compose unicode capture groups. */

var rsCombo$1 = '[' + rsComboRange$1 + ']';
/**
 * Used to match [combining diacritical marks](https://en.wikipedia.org/wiki/Combining_Diacritical_Marks) and
 * [combining diacritical marks for symbols](https://en.wikipedia.org/wiki/Combining_Diacritical_Marks_for_Symbols).
 */

var reComboMark = RegExp(rsCombo$1, 'g');
/**
 * Deburrs \`string\` by converting
 * [Latin-1 Supplement](https://en.wikipedia.org/wiki/Latin-1_Supplement_(Unicode_block)#Character_table)
 * and [Latin Extended-A](https://en.wikipedia.org/wiki/Latin_Extended-A)
 * letters to basic Latin letters and removing
 * [combining diacritical marks](https://en.wikipedia.org/wiki/Combining_Diacritical_Marks).
 *
 * @static
 * @memberOf _
 * @since 3.0.0
 * @category String
 * @param {string} [string=''] The string to deburr.
 * @returns {string} Returns the deburred string.
 * @example
 *
 * _.deburr('déjà vu');
 * // => 'deja vu'
 */

function deburr$1(string) {
  string = toString$1(string);
  return string && string.replace(reLatin, deburrLetter).replace(reComboMark, '');
}

var deburr_1 = deburr$1;

/** Used to match words composed of alphanumeric characters. */
var reAsciiWord = /[^\\\\x00-\\\\x2f\\\\x3a-\\\\x40\\\\x5b-\\\\x60\\\\x7b-\\\\x7f]+/g;
/**
 * Splits an ASCII \`string\` into an array of its words.
 *
 * @private
 * @param {string} The string to inspect.
 * @returns {Array} Returns the words of \`string\`.
 */

function asciiWords$1(string) {
  return string.match(reAsciiWord) || [];
}

var _asciiWords = asciiWords$1;

/** Used to detect strings that need a more robust regexp to match words. */
var reHasUnicodeWord = /[a-z][A-Z]|[A-Z]{2}[a-z]|[0-9][a-zA-Z]|[a-zA-Z][0-9]|[^a-zA-Z0-9 ]/;
/**
 * Checks if \`string\` contains a word composed of Unicode symbols.
 *
 * @private
 * @param {string} string The string to inspect.
 * @returns {boolean} Returns \`true\` if a word is found, else \`false\`.
 */

function hasUnicodeWord$1(string) {
  return reHasUnicodeWord.test(string);
}

var _hasUnicodeWord = hasUnicodeWord$1;

/** Used to compose unicode character classes. */
var rsAstralRange = '\\\\\\\\ud800-\\\\\\\\udfff',
    rsComboMarksRange = '\\\\\\\\u0300-\\\\\\\\u036f',
    reComboHalfMarksRange = '\\\\\\\\ufe20-\\\\\\\\ufe2f',
    rsComboSymbolsRange = '\\\\\\\\u20d0-\\\\\\\\u20ff',
    rsComboRange = rsComboMarksRange + reComboHalfMarksRange + rsComboSymbolsRange,
    rsDingbatRange = '\\\\\\\\u2700-\\\\\\\\u27bf',
    rsLowerRange = 'a-z\\\\\\\\xdf-\\\\\\\\xf6\\\\\\\\xf8-\\\\\\\\xff',
    rsMathOpRange = '\\\\\\\\xac\\\\\\\\xb1\\\\\\\\xd7\\\\\\\\xf7',
    rsNonCharRange = '\\\\\\\\x00-\\\\\\\\x2f\\\\\\\\x3a-\\\\\\\\x40\\\\\\\\x5b-\\\\\\\\x60\\\\\\\\x7b-\\\\\\\\xbf',
    rsPunctuationRange = '\\\\\\\\u2000-\\\\\\\\u206f',
    rsSpaceRange = ' \\\\\\\\t\\\\\\\\x0b\\\\\\\\f\\\\\\\\xa0\\\\\\\\ufeff\\\\\\\\n\\\\\\\\r\\\\\\\\u2028\\\\\\\\u2029\\\\\\\\u1680\\\\\\\\u180e\\\\\\\\u2000\\\\\\\\u2001\\\\\\\\u2002\\\\\\\\u2003\\\\\\\\u2004\\\\\\\\u2005\\\\\\\\u2006\\\\\\\\u2007\\\\\\\\u2008\\\\\\\\u2009\\\\\\\\u200a\\\\\\\\u202f\\\\\\\\u205f\\\\\\\\u3000',
    rsUpperRange = 'A-Z\\\\\\\\xc0-\\\\\\\\xd6\\\\\\\\xd8-\\\\\\\\xde',
    rsVarRange = '\\\\\\\\ufe0e\\\\\\\\ufe0f',
    rsBreakRange = rsMathOpRange + rsNonCharRange + rsPunctuationRange + rsSpaceRange;
/** Used to compose unicode capture groups. */

var rsApos$1 = \\"['\\\\u2019]\\",
    rsBreak = '[' + rsBreakRange + ']',
    rsCombo = '[' + rsComboRange + ']',
    rsDigits = '\\\\\\\\d+',
    rsDingbat = '[' + rsDingbatRange + ']',
    rsLower = '[' + rsLowerRange + ']',
    rsMisc = '[^' + rsAstralRange + rsBreakRange + rsDigits + rsDingbatRange + rsLowerRange + rsUpperRange + ']',
    rsFitz = '\\\\\\\\ud83c[\\\\\\\\udffb-\\\\\\\\udfff]',
    rsModifier = '(?:' + rsCombo + '|' + rsFitz + ')',
    rsNonAstral = '[^' + rsAstralRange + ']',
    rsRegional = '(?:\\\\\\\\ud83c[\\\\\\\\udde6-\\\\\\\\uddff]){2}',
    rsSurrPair = '[\\\\\\\\ud800-\\\\\\\\udbff][\\\\\\\\udc00-\\\\\\\\udfff]',
    rsUpper = '[' + rsUpperRange + ']',
    rsZWJ = '\\\\\\\\u200d';
/** Used to compose unicode regexes. */

var rsMiscLower = '(?:' + rsLower + '|' + rsMisc + ')',
    rsMiscUpper = '(?:' + rsUpper + '|' + rsMisc + ')',
    rsOptContrLower = '(?:' + rsApos$1 + '(?:d|ll|m|re|s|t|ve))?',
    rsOptContrUpper = '(?:' + rsApos$1 + '(?:D|LL|M|RE|S|T|VE))?',
    reOptMod = rsModifier + '?',
    rsOptVar = '[' + rsVarRange + ']?',
    rsOptJoin = '(?:' + rsZWJ + '(?:' + [rsNonAstral, rsRegional, rsSurrPair].join('|') + ')' + rsOptVar + reOptMod + ')*',
    rsOrdLower = '\\\\\\\\d*(?:1st|2nd|3rd|(?![123])\\\\\\\\dth)(?=\\\\\\\\b|[A-Z_])',
    rsOrdUpper = '\\\\\\\\d*(?:1ST|2ND|3RD|(?![123])\\\\\\\\dTH)(?=\\\\\\\\b|[a-z_])',
    rsSeq = rsOptVar + reOptMod + rsOptJoin,
    rsEmoji = '(?:' + [rsDingbat, rsRegional, rsSurrPair].join('|') + ')' + rsSeq;
/** Used to match complex or compound words. */

var reUnicodeWord = RegExp([rsUpper + '?' + rsLower + '+' + rsOptContrLower + '(?=' + [rsBreak, rsUpper, '$'].join('|') + ')', rsMiscUpper + '+' + rsOptContrUpper + '(?=' + [rsBreak, rsUpper + rsMiscLower, '$'].join('|') + ')', rsUpper + '?' + rsMiscLower + '+' + rsOptContrLower, rsUpper + '+' + rsOptContrUpper, rsOrdUpper, rsOrdLower, rsDigits, rsEmoji].join('|'), 'g');
/**
 * Splits a Unicode \`string\` into an array of its words.
 *
 * @private
 * @param {string} The string to inspect.
 * @returns {Array} Returns the words of \`string\`.
 */

function unicodeWords$1(string) {
  return string.match(reUnicodeWord) || [];
}

var _unicodeWords = unicodeWords$1;

var asciiWords = _asciiWords,
    hasUnicodeWord = _hasUnicodeWord,
    toString = toString_1,
    unicodeWords = _unicodeWords;
/**
 * Splits \`string\` into an array of its words.
 *
 * @static
 * @memberOf _
 * @since 3.0.0
 * @category String
 * @param {string} [string=''] The string to inspect.
 * @param {RegExp|string} [pattern] The pattern to match words.
 * @param- {Object} [guard] Enables use as an iteratee for methods like \`_.map\`.
 * @returns {Array} Returns the words of \`string\`.
 * @example
 *
 * _.words('fred, barney, & pebbles');
 * // => ['fred', 'barney', 'pebbles']
 *
 * _.words('fred, barney, & pebbles', /[^, ]+/g);
 * // => ['fred', 'barney', '&', 'pebbles']
 */

function words$1(string, pattern, guard) {
  string = toString(string);
  pattern = guard ? undefined : pattern;

  if (pattern === undefined) {
    return hasUnicodeWord(string) ? unicodeWords(string) : asciiWords(string);
  }

  return string.match(pattern) || [];
}

var words_1 = words$1;

var arrayReduce = _arrayReduce,
    deburr = deburr_1,
    words = words_1;
/** Used to compose unicode capture groups. */

var rsApos = \\"['\\\\u2019]\\";
/** Used to match apostrophes. */

var reApos = RegExp(rsApos, 'g');
/**
 * Creates a function like \`_.camelCase\`.
 *
 * @private
 * @param {Function} callback The function to combine each word.
 * @returns {Function} Returns the new compounder function.
 */

function createCompounder$1(callback) {
  return function (string) {
    return arrayReduce(words(deburr(string).replace(reApos, '')), callback, '');
  };
}

var _createCompounder = createCompounder$1;

var capitalize = capitalize_1,
    createCompounder = _createCompounder;
/**
 * Converts \`string\` to [camel case](https://en.wikipedia.org/wiki/CamelCase).
 *
 * @static
 * @memberOf _
 * @since 3.0.0
 * @category String
 * @param {string} [string=''] The string to convert.
 * @returns {string} Returns the camel cased string.
 * @example
 *
 * _.camelCase('Foo Bar');
 * // => 'fooBar'
 *
 * _.camelCase('--foo-bar--');
 * // => 'fooBar'
 *
 * _.camelCase('__FOO_BAR__');
 * // => 'fooBar'
 */

var camelCase = createCompounder(function (result, word, index) {
  word = word.toLowerCase();
  return result + (index ? capitalize(word) : word);
});
var camelCase_1 = camelCase;

function makeCamelCase(string) {
  return camelCase_1(string);
}

exports.makeCamelCase = makeCamelCase;
//# sourceMappingURL=index.cjs.js.map
"
`;

exports[`Publish Test File via Babel: esm 1`] = `
"/*! deep-lodash v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
var commonjsGlobal = typeof globalThis !== 'undefined' ? globalThis : typeof window !== 'undefined' ? window : typeof global !== 'undefined' ? global : typeof self !== 'undefined' ? self : {};

/** Detect free variable \`global\` from Node.js. */
var freeGlobal$1 = typeof commonjsGlobal == 'object' && commonjsGlobal && commonjsGlobal.Object === Object && commonjsGlobal;
var _freeGlobal = freeGlobal$1;

var freeGlobal = _freeGlobal;
/** Detect free variable \`self\`. */

var freeSelf = typeof self == 'object' && self && self.Object === Object && self;
/** Used as a reference to the global object. */

var root$1 = freeGlobal || freeSelf || Function('return this')();
var _root = root$1;

var root = _root;
/** Built-in value references. */

var Symbol$3 = root.Symbol;
var _Symbol = Symbol$3;

/**
 * A specialized version of \`_.map\` for arrays without support for iteratee
 * shorthands.
 *
 * @private
 * @param {Array} [array] The array to iterate over.
 * @param {Function} iteratee The function invoked per iteration.
 * @returns {Array} Returns the new mapped array.
 */

function arrayMap$1(array, iteratee) {
  var index = -1,
      length = array == null ? 0 : array.length,
      result = Array(length);

  while (++index < length) {
    result[index] = iteratee(array[index], index, array);
  }

  return result;
}

var _arrayMap = arrayMap$1;

/**
 * Checks if \`value\` is classified as an \`Array\` object.
 *
 * @static
 * @memberOf _
 * @since 0.1.0
 * @category Lang
 * @param {*} value The value to check.
 * @returns {boolean} Returns \`true\` if \`value\` is an array, else \`false\`.
 * @example
 *
 * _.isArray([1, 2, 3]);
 * // => true
 *
 * _.isArray(document.body.children);
 * // => false
 *
 * _.isArray('abc');
 * // => false
 *
 * _.isArray(_.noop);
 * // => false
 */
var isArray$1 = Array.isArray;
var isArray_1 = isArray$1;

var Symbol$2 = _Symbol;
/** Used for built-in method references. */

var objectProto$1 = Object.prototype;
/** Used to check objects for own properties. */

var hasOwnProperty = objectProto$1.hasOwnProperty;
/**
 * Used to resolve the
 * [\`toStringTag\`](http://ecma-international.org/ecma-262/7.0/#sec-object.prototype.tostring)
 * of values.
 */

var nativeObjectToString$1 = objectProto$1.toString;
/** Built-in value references. */

var symToStringTag$1 = Symbol$2 ? Symbol$2.toStringTag : undefined;
/**
 * A specialized version of \`baseGetTag\` which ignores \`Symbol.toStringTag\` values.
 *
 * @private
 * @param {*} value The value to query.
 * @returns {string} Returns the raw \`toStringTag\`.
 */

function getRawTag$1(value) {
  var isOwn = hasOwnProperty.call(value, symToStringTag$1),
      tag = value[symToStringTag$1];

  try {
    value[symToStringTag$1] = undefined;
    var unmasked = true;
  } catch (e) {}

  var result = nativeObjectToString$1.call(value);

  if (unmasked) {
    if (isOwn) {
      value[symToStringTag$1] = tag;
    } else {
      delete value[symToStringTag$1];
    }
  }

  return result;
}

var _getRawTag = getRawTag$1;

/** Used for built-in method references. */
var objectProto = Object.prototype;
/**
 * Used to resolve the
 * [\`toStringTag\`](http://ecma-international.org/ecma-262/7.0/#sec-object.prototype.tostring)
 * of values.
 */

var nativeObjectToString = objectProto.toString;
/**
 * Converts \`value\` to a string using \`Object.prototype.toString\`.
 *
 * @private
 * @param {*} value The value to convert.
 * @returns {string} Returns the converted string.
 */

function objectToString$1(value) {
  return nativeObjectToString.call(value);
}

var _objectToString = objectToString$1;

var Symbol$1 = _Symbol,
    getRawTag = _getRawTag,
    objectToString = _objectToString;
/** \`Object#toString\` result references. */

var nullTag = '[object Null]',
    undefinedTag = '[object Undefined]';
/** Built-in value references. */

var symToStringTag = Symbol$1 ? Symbol$1.toStringTag : undefined;
/**
 * The base implementation of \`getTag\` without fallbacks for buggy environments.
 *
 * @private
 * @param {*} value The value to query.
 * @returns {string} Returns the \`toStringTag\`.
 */

function baseGetTag$1(value) {
  if (value == null) {
    return value === undefined ? undefinedTag : nullTag;
  }

  return symToStringTag && symToStringTag in Object(value) ? getRawTag(value) : objectToString(value);
}

var _baseGetTag = baseGetTag$1;

/**
 * Checks if \`value\` is object-like. A value is object-like if it's not \`null\`
 * and has a \`typeof\` result of \\"object\\".
 *
 * @static
 * @memberOf _
 * @since 4.0.0
 * @category Lang
 * @param {*} value The value to check.
 * @returns {boolean} Returns \`true\` if \`value\` is object-like, else \`false\`.
 * @example
 *
 * _.isObjectLike({});
 * // => true
 *
 * _.isObjectLike([1, 2, 3]);
 * // => true
 *
 * _.isObjectLike(_.noop);
 * // => false
 *
 * _.isObjectLike(null);
 * // => false
 */

function isObjectLike$1(value) {
  return value != null && typeof value == 'object';
}

var isObjectLike_1 = isObjectLike$1;

var baseGetTag = _baseGetTag,
    isObjectLike = isObjectLike_1;
/** \`Object#toString\` result references. */

var symbolTag = '[object Symbol]';
/**
 * Checks if \`value\` is classified as a \`Symbol\` primitive or object.
 *
 * @static
 * @memberOf _
 * @since 4.0.0
 * @category Lang
 * @param {*} value The value to check.
 * @returns {boolean} Returns \`true\` if \`value\` is a symbol, else \`false\`.
 * @example
 *
 * _.isSymbol(Symbol.iterator);
 * // => true
 *
 * _.isSymbol('abc');
 * // => false
 */

function isSymbol$1(value) {
  return typeof value == 'symbol' || isObjectLike(value) && baseGetTag(value) == symbolTag;
}

var isSymbol_1 = isSymbol$1;

var Symbol = _Symbol,
    arrayMap = _arrayMap,
    isArray = isArray_1,
    isSymbol = isSymbol_1;
/** Used as references for various \`Number\` constants. */

var INFINITY = 1 / 0;
/** Used to convert symbols to primitives and strings. */

var symbolProto = Symbol ? Symbol.prototype : undefined,
    symbolToString = symbolProto ? symbolProto.toString : undefined;
/**
 * The base implementation of \`_.toString\` which doesn't convert nullish
 * values to empty strings.
 *
 * @private
 * @param {*} value The value to process.
 * @returns {string} Returns the string.
 */

function baseToString$1(value) {
  // Exit early for strings to avoid a performance hit in some environments.
  if (typeof value == 'string') {
    return value;
  }

  if (isArray(value)) {
    // Recursively convert values (susceptible to call stack limits).
    return arrayMap(value, baseToString$1) + '';
  }

  if (isSymbol(value)) {
    return symbolToString ? symbolToString.call(value) : '';
  }

  var result = value + '';
  return result == '0' && 1 / value == -INFINITY ? '-0' : result;
}

var _baseToString = baseToString$1;

var baseToString = _baseToString;
/**
 * Converts \`value\` to a string. An empty string is returned for \`null\`
 * and \`undefined\` values. The sign of \`-0\` is preserved.
 *
 * @static
 * @memberOf _
 * @since 4.0.0
 * @category Lang
 * @param {*} value The value to convert.
 * @returns {string} Returns the converted string.
 * @example
 *
 * _.toString(null);
 * // => ''
 *
 * _.toString(-0);
 * // => '-0'
 *
 * _.toString([1, 2, 3]);
 * // => '1,2,3'
 */

function toString$4(value) {
  return value == null ? '' : baseToString(value);
}

var toString_1 = toString$4;

/**
 * The base implementation of \`_.slice\` without an iteratee call guard.
 *
 * @private
 * @param {Array} array The array to slice.
 * @param {number} [start=0] The start position.
 * @param {number} [end=array.length] The end position.
 * @returns {Array} Returns the slice of \`array\`.
 */

function baseSlice$1(array, start, end) {
  var index = -1,
      length = array.length;

  if (start < 0) {
    start = -start > length ? 0 : length + start;
  }

  end = end > length ? length : end;

  if (end < 0) {
    end += length;
  }

  length = start > end ? 0 : end - start >>> 0;
  start >>>= 0;
  var result = Array(length);

  while (++index < length) {
    result[index] = array[index + start];
  }

  return result;
}

var _baseSlice = baseSlice$1;

var baseSlice = _baseSlice;
/**
 * Casts \`array\` to a slice if it's needed.
 *
 * @private
 * @param {Array} array The array to inspect.
 * @param {number} start The start position.
 * @param {number} [end=array.length] The end position.
 * @returns {Array} Returns the cast slice.
 */

function castSlice$1(array, start, end) {
  var length = array.length;
  end = end === undefined ? length : end;
  return !start && end >= length ? array : baseSlice(array, start, end);
}

var _castSlice = castSlice$1;

/** Used to compose unicode character classes. */
var rsAstralRange$2 = '\\\\\\\\ud800-\\\\\\\\udfff',
    rsComboMarksRange$3 = '\\\\\\\\u0300-\\\\\\\\u036f',
    reComboHalfMarksRange$3 = '\\\\\\\\ufe20-\\\\\\\\ufe2f',
    rsComboSymbolsRange$3 = '\\\\\\\\u20d0-\\\\\\\\u20ff',
    rsComboRange$3 = rsComboMarksRange$3 + reComboHalfMarksRange$3 + rsComboSymbolsRange$3,
    rsVarRange$2 = '\\\\\\\\ufe0e\\\\\\\\ufe0f';
/** Used to compose unicode capture groups. */

var rsZWJ$2 = '\\\\\\\\u200d';
/** Used to detect strings with [zero-width joiners or code points from the astral planes](http://eev.ee/blog/2015/09/12/dark-corners-of-unicode/). */

var reHasUnicode = RegExp('[' + rsZWJ$2 + rsAstralRange$2 + rsComboRange$3 + rsVarRange$2 + ']');
/**
 * Checks if \`string\` contains Unicode symbols.
 *
 * @private
 * @param {string} string The string to inspect.
 * @returns {boolean} Returns \`true\` if a symbol is found, else \`false\`.
 */

function hasUnicode$2(string) {
  return reHasUnicode.test(string);
}

var _hasUnicode = hasUnicode$2;

/**
 * Converts an ASCII \`string\` to an array.
 *
 * @private
 * @param {string} string The string to convert.
 * @returns {Array} Returns the converted array.
 */

function asciiToArray$1(string) {
  return string.split('');
}

var _asciiToArray = asciiToArray$1;

/** Used to compose unicode character classes. */
var rsAstralRange$1 = '\\\\\\\\ud800-\\\\\\\\udfff',
    rsComboMarksRange$2 = '\\\\\\\\u0300-\\\\\\\\u036f',
    reComboHalfMarksRange$2 = '\\\\\\\\ufe20-\\\\\\\\ufe2f',
    rsComboSymbolsRange$2 = '\\\\\\\\u20d0-\\\\\\\\u20ff',
    rsComboRange$2 = rsComboMarksRange$2 + reComboHalfMarksRange$2 + rsComboSymbolsRange$2,
    rsVarRange$1 = '\\\\\\\\ufe0e\\\\\\\\ufe0f';
/** Used to compose unicode capture groups. */

var rsAstral = '[' + rsAstralRange$1 + ']',
    rsCombo$2 = '[' + rsComboRange$2 + ']',
    rsFitz$1 = '\\\\\\\\ud83c[\\\\\\\\udffb-\\\\\\\\udfff]',
    rsModifier$1 = '(?:' + rsCombo$2 + '|' + rsFitz$1 + ')',
    rsNonAstral$1 = '[^' + rsAstralRange$1 + ']',
    rsRegional$1 = '(?:\\\\\\\\ud83c[\\\\\\\\udde6-\\\\\\\\uddff]){2}',
    rsSurrPair$1 = '[\\\\\\\\ud800-\\\\\\\\udbff][\\\\\\\\udc00-\\\\\\\\udfff]',
    rsZWJ$1 = '\\\\\\\\u200d';
/** Used to compose unicode regexes. */

var reOptMod$1 = rsModifier$1 + '?',
    rsOptVar$1 = '[' + rsVarRange$1 + ']?',
    rsOptJoin$1 = '(?:' + rsZWJ$1 + '(?:' + [rsNonAstral$1, rsRegional$1, rsSurrPair$1].join('|') + ')' + rsOptVar$1 + reOptMod$1 + ')*',
    rsSeq$1 = rsOptVar$1 + reOptMod$1 + rsOptJoin$1,
    rsSymbol = '(?:' + [rsNonAstral$1 + rsCombo$2 + '?', rsCombo$2, rsRegional$1, rsSurrPair$1, rsAstral].join('|') + ')';
/** Used to match [string symbols](https://mathiasbynens.be/notes/javascript-unicode). */

var reUnicode = RegExp(rsFitz$1 + '(?=' + rsFitz$1 + ')|' + rsSymbol + rsSeq$1, 'g');
/**
 * Converts a Unicode \`string\` to an array.
 *
 * @private
 * @param {string} string The string to convert.
 * @returns {Array} Returns the converted array.
 */

function unicodeToArray$1(string) {
  return string.match(reUnicode) || [];
}

var _unicodeToArray = unicodeToArray$1;

var asciiToArray = _asciiToArray,
    hasUnicode$1 = _hasUnicode,
    unicodeToArray = _unicodeToArray;
/**
 * Converts \`string\` to an array.
 *
 * @private
 * @param {string} string The string to convert.
 * @returns {Array} Returns the converted array.
 */

function stringToArray$1(string) {
  return hasUnicode$1(string) ? unicodeToArray(string) : asciiToArray(string);
}

var _stringToArray = stringToArray$1;

var castSlice = _castSlice,
    hasUnicode = _hasUnicode,
    stringToArray = _stringToArray,
    toString$3 = toString_1;
/**
 * Creates a function like \`_.lowerFirst\`.
 *
 * @private
 * @param {string} methodName The name of the \`String\` case method to use.
 * @returns {Function} Returns the new case function.
 */

function createCaseFirst$1(methodName) {
  return function (string) {
    string = toString$3(string);
    var strSymbols = hasUnicode(string) ? stringToArray(string) : undefined;
    var chr = strSymbols ? strSymbols[0] : string.charAt(0);
    var trailing = strSymbols ? castSlice(strSymbols, 1).join('') : string.slice(1);
    return chr[methodName]() + trailing;
  };
}

var _createCaseFirst = createCaseFirst$1;

var createCaseFirst = _createCaseFirst;
/**
 * Converts the first character of \`string\` to upper case.
 *
 * @static
 * @memberOf _
 * @since 4.0.0
 * @category String
 * @param {string} [string=''] The string to convert.
 * @returns {string} Returns the converted string.
 * @example
 *
 * _.upperFirst('fred');
 * // => 'Fred'
 *
 * _.upperFirst('FRED');
 * // => 'FRED'
 */

var upperFirst$1 = createCaseFirst('toUpperCase');
var upperFirst_1 = upperFirst$1;

var toString$2 = toString_1,
    upperFirst = upperFirst_1;
/**
 * Converts the first character of \`string\` to upper case and the remaining
 * to lower case.
 *
 * @static
 * @memberOf _
 * @since 3.0.0
 * @category String
 * @param {string} [string=''] The string to capitalize.
 * @returns {string} Returns the capitalized string.
 * @example
 *
 * _.capitalize('FRED');
 * // => 'Fred'
 */

function capitalize$1(string) {
  return upperFirst(toString$2(string).toLowerCase());
}

var capitalize_1 = capitalize$1;

/**
 * A specialized version of \`_.reduce\` for arrays without support for
 * iteratee shorthands.
 *
 * @private
 * @param {Array} [array] The array to iterate over.
 * @param {Function} iteratee The function invoked per iteration.
 * @param {*} [accumulator] The initial value.
 * @param {boolean} [initAccum] Specify using the first element of \`array\` as
 *  the initial value.
 * @returns {*} Returns the accumulated value.
 */

function arrayReduce$1(array, iteratee, accumulator, initAccum) {
  var index = -1,
      length = array == null ? 0 : array.length;

  if (initAccum && length) {
    accumulator = array[++index];
  }

  while (++index < length) {
    accumulator = iteratee(accumulator, array[index], index, array);
  }

  return accumulator;
}

var _arrayReduce = arrayReduce$1;

/**
 * The base implementation of \`_.propertyOf\` without support for deep paths.
 *
 * @private
 * @param {Object} object The object to query.
 * @returns {Function} Returns the new accessor function.
 */

function basePropertyOf$1(object) {
  return function (key) {
    return object == null ? undefined : object[key];
  };
}

var _basePropertyOf = basePropertyOf$1;

var basePropertyOf = _basePropertyOf;
/** Used to map Latin Unicode letters to basic Latin letters. */

var deburredLetters = {
  // Latin-1 Supplement block.
  '\\\\xc0': 'A',
  '\\\\xc1': 'A',
  '\\\\xc2': 'A',
  '\\\\xc3': 'A',
  '\\\\xc4': 'A',
  '\\\\xc5': 'A',
  '\\\\xe0': 'a',
  '\\\\xe1': 'a',
  '\\\\xe2': 'a',
  '\\\\xe3': 'a',
  '\\\\xe4': 'a',
  '\\\\xe5': 'a',
  '\\\\xc7': 'C',
  '\\\\xe7': 'c',
  '\\\\xd0': 'D',
  '\\\\xf0': 'd',
  '\\\\xc8': 'E',
  '\\\\xc9': 'E',
  '\\\\xca': 'E',
  '\\\\xcb': 'E',
  '\\\\xe8': 'e',
  '\\\\xe9': 'e',
  '\\\\xea': 'e',
  '\\\\xeb': 'e',
  '\\\\xcc': 'I',
  '\\\\xcd': 'I',
  '\\\\xce': 'I',
  '\\\\xcf': 'I',
  '\\\\xec': 'i',
  '\\\\xed': 'i',
  '\\\\xee': 'i',
  '\\\\xef': 'i',
  '\\\\xd1': 'N',
  '\\\\xf1': 'n',
  '\\\\xd2': 'O',
  '\\\\xd3': 'O',
  '\\\\xd4': 'O',
  '\\\\xd5': 'O',
  '\\\\xd6': 'O',
  '\\\\xd8': 'O',
  '\\\\xf2': 'o',
  '\\\\xf3': 'o',
  '\\\\xf4': 'o',
  '\\\\xf5': 'o',
  '\\\\xf6': 'o',
  '\\\\xf8': 'o',
  '\\\\xd9': 'U',
  '\\\\xda': 'U',
  '\\\\xdb': 'U',
  '\\\\xdc': 'U',
  '\\\\xf9': 'u',
  '\\\\xfa': 'u',
  '\\\\xfb': 'u',
  '\\\\xfc': 'u',
  '\\\\xdd': 'Y',
  '\\\\xfd': 'y',
  '\\\\xff': 'y',
  '\\\\xc6': 'Ae',
  '\\\\xe6': 'ae',
  '\\\\xde': 'Th',
  '\\\\xfe': 'th',
  '\\\\xdf': 'ss',
  // Latin Extended-A block.
  '\\\\u0100': 'A',
  '\\\\u0102': 'A',
  '\\\\u0104': 'A',
  '\\\\u0101': 'a',
  '\\\\u0103': 'a',
  '\\\\u0105': 'a',
  '\\\\u0106': 'C',
  '\\\\u0108': 'C',
  '\\\\u010a': 'C',
  '\\\\u010c': 'C',
  '\\\\u0107': 'c',
  '\\\\u0109': 'c',
  '\\\\u010b': 'c',
  '\\\\u010d': 'c',
  '\\\\u010e': 'D',
  '\\\\u0110': 'D',
  '\\\\u010f': 'd',
  '\\\\u0111': 'd',
  '\\\\u0112': 'E',
  '\\\\u0114': 'E',
  '\\\\u0116': 'E',
  '\\\\u0118': 'E',
  '\\\\u011a': 'E',
  '\\\\u0113': 'e',
  '\\\\u0115': 'e',
  '\\\\u0117': 'e',
  '\\\\u0119': 'e',
  '\\\\u011b': 'e',
  '\\\\u011c': 'G',
  '\\\\u011e': 'G',
  '\\\\u0120': 'G',
  '\\\\u0122': 'G',
  '\\\\u011d': 'g',
  '\\\\u011f': 'g',
  '\\\\u0121': 'g',
  '\\\\u0123': 'g',
  '\\\\u0124': 'H',
  '\\\\u0126': 'H',
  '\\\\u0125': 'h',
  '\\\\u0127': 'h',
  '\\\\u0128': 'I',
  '\\\\u012a': 'I',
  '\\\\u012c': 'I',
  '\\\\u012e': 'I',
  '\\\\u0130': 'I',
  '\\\\u0129': 'i',
  '\\\\u012b': 'i',
  '\\\\u012d': 'i',
  '\\\\u012f': 'i',
  '\\\\u0131': 'i',
  '\\\\u0134': 'J',
  '\\\\u0135': 'j',
  '\\\\u0136': 'K',
  '\\\\u0137': 'k',
  '\\\\u0138': 'k',
  '\\\\u0139': 'L',
  '\\\\u013b': 'L',
  '\\\\u013d': 'L',
  '\\\\u013f': 'L',
  '\\\\u0141': 'L',
  '\\\\u013a': 'l',
  '\\\\u013c': 'l',
  '\\\\u013e': 'l',
  '\\\\u0140': 'l',
  '\\\\u0142': 'l',
  '\\\\u0143': 'N',
  '\\\\u0145': 'N',
  '\\\\u0147': 'N',
  '\\\\u014a': 'N',
  '\\\\u0144': 'n',
  '\\\\u0146': 'n',
  '\\\\u0148': 'n',
  '\\\\u014b': 'n',
  '\\\\u014c': 'O',
  '\\\\u014e': 'O',
  '\\\\u0150': 'O',
  '\\\\u014d': 'o',
  '\\\\u014f': 'o',
  '\\\\u0151': 'o',
  '\\\\u0154': 'R',
  '\\\\u0156': 'R',
  '\\\\u0158': 'R',
  '\\\\u0155': 'r',
  '\\\\u0157': 'r',
  '\\\\u0159': 'r',
  '\\\\u015a': 'S',
  '\\\\u015c': 'S',
  '\\\\u015e': 'S',
  '\\\\u0160': 'S',
  '\\\\u015b': 's',
  '\\\\u015d': 's',
  '\\\\u015f': 's',
  '\\\\u0161': 's',
  '\\\\u0162': 'T',
  '\\\\u0164': 'T',
  '\\\\u0166': 'T',
  '\\\\u0163': 't',
  '\\\\u0165': 't',
  '\\\\u0167': 't',
  '\\\\u0168': 'U',
  '\\\\u016a': 'U',
  '\\\\u016c': 'U',
  '\\\\u016e': 'U',
  '\\\\u0170': 'U',
  '\\\\u0172': 'U',
  '\\\\u0169': 'u',
  '\\\\u016b': 'u',
  '\\\\u016d': 'u',
  '\\\\u016f': 'u',
  '\\\\u0171': 'u',
  '\\\\u0173': 'u',
  '\\\\u0174': 'W',
  '\\\\u0175': 'w',
  '\\\\u0176': 'Y',
  '\\\\u0177': 'y',
  '\\\\u0178': 'Y',
  '\\\\u0179': 'Z',
  '\\\\u017b': 'Z',
  '\\\\u017d': 'Z',
  '\\\\u017a': 'z',
  '\\\\u017c': 'z',
  '\\\\u017e': 'z',
  '\\\\u0132': 'IJ',
  '\\\\u0133': 'ij',
  '\\\\u0152': 'Oe',
  '\\\\u0153': 'oe',
  '\\\\u0149': \\"'n\\",
  '\\\\u017f': 's'
};
/**
 * Used by \`_.deburr\` to convert Latin-1 Supplement and Latin Extended-A
 * letters to basic Latin letters.
 *
 * @private
 * @param {string} letter The matched letter to deburr.
 * @returns {string} Returns the deburred letter.
 */

var deburrLetter$1 = basePropertyOf(deburredLetters);
var _deburrLetter = deburrLetter$1;

var deburrLetter = _deburrLetter,
    toString$1 = toString_1;
/** Used to match Latin Unicode letters (excluding mathematical operators). */

var reLatin = /[\\\\xc0-\\\\xd6\\\\xd8-\\\\xf6\\\\xf8-\\\\xff\\\\u0100-\\\\u017f]/g;
/** Used to compose unicode character classes. */

var rsComboMarksRange$1 = '\\\\\\\\u0300-\\\\\\\\u036f',
    reComboHalfMarksRange$1 = '\\\\\\\\ufe20-\\\\\\\\ufe2f',
    rsComboSymbolsRange$1 = '\\\\\\\\u20d0-\\\\\\\\u20ff',
    rsComboRange$1 = rsComboMarksRange$1 + reComboHalfMarksRange$1 + rsComboSymbolsRange$1;
/** Used to compose unicode capture groups. */

var rsCombo$1 = '[' + rsComboRange$1 + ']';
/**
 * Used to match [combining diacritical marks](https://en.wikipedia.org/wiki/Combining_Diacritical_Marks) and
 * [combining diacritical marks for symbols](https://en.wikipedia.org/wiki/Combining_Diacritical_Marks_for_Symbols).
 */

var reComboMark = RegExp(rsCombo$1, 'g');
/**
 * Deburrs \`string\` by converting
 * [Latin-1 Supplement](https://en.wikipedia.org/wiki/Latin-1_Supplement_(Unicode_block)#Character_table)
 * and [Latin Extended-A](https://en.wikipedia.org/wiki/Latin_Extended-A)
 * letters to basic Latin letters and removing
 * [combining diacritical marks](https://en.wikipedia.org/wiki/Combining_Diacritical_Marks).
 *
 * @static
 * @memberOf _
 * @since 3.0.0
 * @category String
 * @param {string} [string=''] The string to deburr.
 * @returns {string} Returns the deburred string.
 * @example
 *
 * _.deburr('déjà vu');
 * // => 'deja vu'
 */

function deburr$1(string) {
  string = toString$1(string);
  return string && string.replace(reLatin, deburrLetter).replace(reComboMark, '');
}

var deburr_1 = deburr$1;

/** Used to match words composed of alphanumeric characters. */
var reAsciiWord = /[^\\\\x00-\\\\x2f\\\\x3a-\\\\x40\\\\x5b-\\\\x60\\\\x7b-\\\\x7f]+/g;
/**
 * Splits an ASCII \`string\` into an array of its words.
 *
 * @private
 * @param {string} The string to inspect.
 * @returns {Array} Returns the words of \`string\`.
 */

function asciiWords$1(string) {
  return string.match(reAsciiWord) || [];
}

var _asciiWords = asciiWords$1;

/** Used to detect strings that need a more robust regexp to match words. */
var reHasUnicodeWord = /[a-z][A-Z]|[A-Z]{2}[a-z]|[0-9][a-zA-Z]|[a-zA-Z][0-9]|[^a-zA-Z0-9 ]/;
/**
 * Checks if \`string\` contains a word composed of Unicode symbols.
 *
 * @private
 * @param {string} string The string to inspect.
 * @returns {boolean} Returns \`true\` if a word is found, else \`false\`.
 */

function hasUnicodeWord$1(string) {
  return reHasUnicodeWord.test(string);
}

var _hasUnicodeWord = hasUnicodeWord$1;

/** Used to compose unicode character classes. */
var rsAstralRange = '\\\\\\\\ud800-\\\\\\\\udfff',
    rsComboMarksRange = '\\\\\\\\u0300-\\\\\\\\u036f',
    reComboHalfMarksRange = '\\\\\\\\ufe20-\\\\\\\\ufe2f',
    rsComboSymbolsRange = '\\\\\\\\u20d0-\\\\\\\\u20ff',
    rsComboRange = rsComboMarksRange + reComboHalfMarksRange + rsComboSymbolsRange,
    rsDingbatRange = '\\\\\\\\u2700-\\\\\\\\u27bf',
    rsLowerRange = 'a-z\\\\\\\\xdf-\\\\\\\\xf6\\\\\\\\xf8-\\\\\\\\xff',
    rsMathOpRange = '\\\\\\\\xac\\\\\\\\xb1\\\\\\\\xd7\\\\\\\\xf7',
    rsNonCharRange = '\\\\\\\\x00-\\\\\\\\x2f\\\\\\\\x3a-\\\\\\\\x40\\\\\\\\x5b-\\\\\\\\x60\\\\\\\\x7b-\\\\\\\\xbf',
    rsPunctuationRange = '\\\\\\\\u2000-\\\\\\\\u206f',
    rsSpaceRange = ' \\\\\\\\t\\\\\\\\x0b\\\\\\\\f\\\\\\\\xa0\\\\\\\\ufeff\\\\\\\\n\\\\\\\\r\\\\\\\\u2028\\\\\\\\u2029\\\\\\\\u1680\\\\\\\\u180e\\\\\\\\u2000\\\\\\\\u2001\\\\\\\\u2002\\\\\\\\u2003\\\\\\\\u2004\\\\\\\\u2005\\\\\\\\u2006\\\\\\\\u2007\\\\\\\\u2008\\\\\\\\u2009\\\\\\\\u200a\\\\\\\\u202f\\\\\\\\u205f\\\\\\\\u3000',
    rsUpperRange = 'A-Z\\\\\\\\xc0-\\\\\\\\xd6\\\\\\\\xd8-\\\\\\\\xde',
    rsVarRange = '\\\\\\\\ufe0e\\\\\\\\ufe0f',
    rsBreakRange = rsMathOpRange + rsNonCharRange + rsPunctuationRange + rsSpaceRange;
/** Used to compose unicode capture groups. */

var rsApos$1 = \\"['\\\\u2019]\\",
    rsBreak = '[' + rsBreakRange + ']',
    rsCombo = '[' + rsComboRange + ']',
    rsDigits = '\\\\\\\\d+',
    rsDingbat = '[' + rsDingbatRange + ']',
    rsLower = '[' + rsLowerRange + ']',
    rsMisc = '[^' + rsAstralRange + rsBreakRange + rsDigits + rsDingbatRange + rsLowerRange + rsUpperRange + ']',
    rsFitz = '\\\\\\\\ud83c[\\\\\\\\udffb-\\\\\\\\udfff]',
    rsModifier = '(?:' + rsCombo + '|' + rsFitz + ')',
    rsNonAstral = '[^' + rsAstralRange + ']',
    rsRegional = '(?:\\\\\\\\ud83c[\\\\\\\\udde6-\\\\\\\\uddff]){2}',
    rsSurrPair = '[\\\\\\\\ud800-\\\\\\\\udbff][\\\\\\\\udc00-\\\\\\\\udfff]',
    rsUpper = '[' + rsUpperRange + ']',
    rsZWJ = '\\\\\\\\u200d';
/** Used to compose unicode regexes. */

var rsMiscLower = '(?:' + rsLower + '|' + rsMisc + ')',
    rsMiscUpper = '(?:' + rsUpper + '|' + rsMisc + ')',
    rsOptContrLower = '(?:' + rsApos$1 + '(?:d|ll|m|re|s|t|ve))?',
    rsOptContrUpper = '(?:' + rsApos$1 + '(?:D|LL|M|RE|S|T|VE))?',
    reOptMod = rsModifier + '?',
    rsOptVar = '[' + rsVarRange + ']?',
    rsOptJoin = '(?:' + rsZWJ + '(?:' + [rsNonAstral, rsRegional, rsSurrPair].join('|') + ')' + rsOptVar + reOptMod + ')*',
    rsOrdLower = '\\\\\\\\d*(?:1st|2nd|3rd|(?![123])\\\\\\\\dth)(?=\\\\\\\\b|[A-Z_])',
    rsOrdUpper = '\\\\\\\\d*(?:1ST|2ND|3RD|(?![123])\\\\\\\\dTH)(?=\\\\\\\\b|[a-z_])',
    rsSeq = rsOptVar + reOptMod + rsOptJoin,
    rsEmoji = '(?:' + [rsDingbat, rsRegional, rsSurrPair].join('|') + ')' + rsSeq;
/** Used to match complex or compound words. */

var reUnicodeWord = RegExp([rsUpper + '?' + rsLower + '+' + rsOptContrLower + '(?=' + [rsBreak, rsUpper, '$'].join('|') + ')', rsMiscUpper + '+' + rsOptContrUpper + '(?=' + [rsBreak, rsUpper + rsMiscLower, '$'].join('|') + ')', rsUpper + '?' + rsMiscLower + '+' + rsOptContrLower, rsUpper + '+' + rsOptContrUpper, rsOrdUpper, rsOrdLower, rsDigits, rsEmoji].join('|'), 'g');
/**
 * Splits a Unicode \`string\` into an array of its words.
 *
 * @private
 * @param {string} The string to inspect.
 * @returns {Array} Returns the words of \`string\`.
 */

function unicodeWords$1(string) {
  return string.match(reUnicodeWord) || [];
}

var _unicodeWords = unicodeWords$1;

var asciiWords = _asciiWords,
    hasUnicodeWord = _hasUnicodeWord,
    toString = toString_1,
    unicodeWords = _unicodeWords;
/**
 * Splits \`string\` into an array of its words.
 *
 * @static
 * @memberOf _
 * @since 3.0.0
 * @category String
 * @param {string} [string=''] The string to inspect.
 * @param {RegExp|string} [pattern] The pattern to match words.
 * @param- {Object} [guard] Enables use as an iteratee for methods like \`_.map\`.
 * @returns {Array} Returns the words of \`string\`.
 * @example
 *
 * _.words('fred, barney, & pebbles');
 * // => ['fred', 'barney', 'pebbles']
 *
 * _.words('fred, barney, & pebbles', /[^, ]+/g);
 * // => ['fred', 'barney', '&', 'pebbles']
 */

function words$1(string, pattern, guard) {
  string = toString(string);
  pattern = guard ? undefined : pattern;

  if (pattern === undefined) {
    return hasUnicodeWord(string) ? unicodeWords(string) : asciiWords(string);
  }

  return string.match(pattern) || [];
}

var words_1 = words$1;

var arrayReduce = _arrayReduce,
    deburr = deburr_1,
    words = words_1;
/** Used to compose unicode capture groups. */

var rsApos = \\"['\\\\u2019]\\";
/** Used to match apostrophes. */

var reApos = RegExp(rsApos, 'g');
/**
 * Creates a function like \`_.camelCase\`.
 *
 * @private
 * @param {Function} callback The function to combine each word.
 * @returns {Function} Returns the new compounder function.
 */

function createCompounder$1(callback) {
  return function (string) {
    return arrayReduce(words(deburr(string).replace(reApos, '')), callback, '');
  };
}

var _createCompounder = createCompounder$1;

var capitalize = capitalize_1,
    createCompounder = _createCompounder;
/**
 * Converts \`string\` to [camel case](https://en.wikipedia.org/wiki/CamelCase).
 *
 * @static
 * @memberOf _
 * @since 3.0.0
 * @category String
 * @param {string} [string=''] The string to convert.
 * @returns {string} Returns the camel cased string.
 * @example
 *
 * _.camelCase('Foo Bar');
 * // => 'fooBar'
 *
 * _.camelCase('--foo-bar--');
 * // => 'fooBar'
 *
 * _.camelCase('__FOO_BAR__');
 * // => 'fooBar'
 */

var camelCase = createCompounder(function (result, word, index) {
  word = word.toLowerCase();
  return result + (index ? capitalize(word) : word);
});
var camelCase_1 = camelCase;

function makeCamelCase(string) {
  return camelCase_1(string);
}

export { makeCamelCase };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`Publish Test File via Babel: umd 1`] = `
"/*! deep-lodash v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
	typeof define === 'function' && define.amd ? define(['exports'], factory) :
	(global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global[\\"deep-lodash\\"] = {}));
})(this, (function (exports) { 'use strict';

	var commonjsGlobal = typeof globalThis !== 'undefined' ? globalThis : typeof window !== 'undefined' ? window : typeof global !== 'undefined' ? global : typeof self !== 'undefined' ? self : {};

	/** Detect free variable \`global\` from Node.js. */
	var freeGlobal$1 = typeof commonjsGlobal == 'object' && commonjsGlobal && commonjsGlobal.Object === Object && commonjsGlobal;
	var _freeGlobal = freeGlobal$1;

	var freeGlobal = _freeGlobal;
	/** Detect free variable \`self\`. */

	var freeSelf = typeof self == 'object' && self && self.Object === Object && self;
	/** Used as a reference to the global object. */

	var root$1 = freeGlobal || freeSelf || Function('return this')();
	var _root = root$1;

	var root = _root;
	/** Built-in value references. */

	var Symbol$3 = root.Symbol;
	var _Symbol = Symbol$3;

	/**
	 * A specialized version of \`_.map\` for arrays without support for iteratee
	 * shorthands.
	 *
	 * @private
	 * @param {Array} [array] The array to iterate over.
	 * @param {Function} iteratee The function invoked per iteration.
	 * @returns {Array} Returns the new mapped array.
	 */

	function arrayMap$1(array, iteratee) {
	  var index = -1,
	      length = array == null ? 0 : array.length,
	      result = Array(length);

	  while (++index < length) {
	    result[index] = iteratee(array[index], index, array);
	  }

	  return result;
	}

	var _arrayMap = arrayMap$1;

	/**
	 * Checks if \`value\` is classified as an \`Array\` object.
	 *
	 * @static
	 * @memberOf _
	 * @since 0.1.0
	 * @category Lang
	 * @param {*} value The value to check.
	 * @returns {boolean} Returns \`true\` if \`value\` is an array, else \`false\`.
	 * @example
	 *
	 * _.isArray([1, 2, 3]);
	 * // => true
	 *
	 * _.isArray(document.body.children);
	 * // => false
	 *
	 * _.isArray('abc');
	 * // => false
	 *
	 * _.isArray(_.noop);
	 * // => false
	 */
	var isArray$1 = Array.isArray;
	var isArray_1 = isArray$1;

	var Symbol$2 = _Symbol;
	/** Used for built-in method references. */

	var objectProto$1 = Object.prototype;
	/** Used to check objects for own properties. */

	var hasOwnProperty = objectProto$1.hasOwnProperty;
	/**
	 * Used to resolve the
	 * [\`toStringTag\`](http://ecma-international.org/ecma-262/7.0/#sec-object.prototype.tostring)
	 * of values.
	 */

	var nativeObjectToString$1 = objectProto$1.toString;
	/** Built-in value references. */

	var symToStringTag$1 = Symbol$2 ? Symbol$2.toStringTag : undefined;
	/**
	 * A specialized version of \`baseGetTag\` which ignores \`Symbol.toStringTag\` values.
	 *
	 * @private
	 * @param {*} value The value to query.
	 * @returns {string} Returns the raw \`toStringTag\`.
	 */

	function getRawTag$1(value) {
	  var isOwn = hasOwnProperty.call(value, symToStringTag$1),
	      tag = value[symToStringTag$1];

	  try {
	    value[symToStringTag$1] = undefined;
	    var unmasked = true;
	  } catch (e) {}

	  var result = nativeObjectToString$1.call(value);

	  if (unmasked) {
	    if (isOwn) {
	      value[symToStringTag$1] = tag;
	    } else {
	      delete value[symToStringTag$1];
	    }
	  }

	  return result;
	}

	var _getRawTag = getRawTag$1;

	/** Used for built-in method references. */
	var objectProto = Object.prototype;
	/**
	 * Used to resolve the
	 * [\`toStringTag\`](http://ecma-international.org/ecma-262/7.0/#sec-object.prototype.tostring)
	 * of values.
	 */

	var nativeObjectToString = objectProto.toString;
	/**
	 * Converts \`value\` to a string using \`Object.prototype.toString\`.
	 *
	 * @private
	 * @param {*} value The value to convert.
	 * @returns {string} Returns the converted string.
	 */

	function objectToString$1(value) {
	  return nativeObjectToString.call(value);
	}

	var _objectToString = objectToString$1;

	var Symbol$1 = _Symbol,
	    getRawTag = _getRawTag,
	    objectToString = _objectToString;
	/** \`Object#toString\` result references. */

	var nullTag = '[object Null]',
	    undefinedTag = '[object Undefined]';
	/** Built-in value references. */

	var symToStringTag = Symbol$1 ? Symbol$1.toStringTag : undefined;
	/**
	 * The base implementation of \`getTag\` without fallbacks for buggy environments.
	 *
	 * @private
	 * @param {*} value The value to query.
	 * @returns {string} Returns the \`toStringTag\`.
	 */

	function baseGetTag$1(value) {
	  if (value == null) {
	    return value === undefined ? undefinedTag : nullTag;
	  }

	  return symToStringTag && symToStringTag in Object(value) ? getRawTag(value) : objectToString(value);
	}

	var _baseGetTag = baseGetTag$1;

	/**
	 * Checks if \`value\` is object-like. A value is object-like if it's not \`null\`
	 * and has a \`typeof\` result of \\"object\\".
	 *
	 * @static
	 * @memberOf _
	 * @since 4.0.0
	 * @category Lang
	 * @param {*} value The value to check.
	 * @returns {boolean} Returns \`true\` if \`value\` is object-like, else \`false\`.
	 * @example
	 *
	 * _.isObjectLike({});
	 * // => true
	 *
	 * _.isObjectLike([1, 2, 3]);
	 * // => true
	 *
	 * _.isObjectLike(_.noop);
	 * // => false
	 *
	 * _.isObjectLike(null);
	 * // => false
	 */

	function isObjectLike$1(value) {
	  return value != null && typeof value == 'object';
	}

	var isObjectLike_1 = isObjectLike$1;

	var baseGetTag = _baseGetTag,
	    isObjectLike = isObjectLike_1;
	/** \`Object#toString\` result references. */

	var symbolTag = '[object Symbol]';
	/**
	 * Checks if \`value\` is classified as a \`Symbol\` primitive or object.
	 *
	 * @static
	 * @memberOf _
	 * @since 4.0.0
	 * @category Lang
	 * @param {*} value The value to check.
	 * @returns {boolean} Returns \`true\` if \`value\` is a symbol, else \`false\`.
	 * @example
	 *
	 * _.isSymbol(Symbol.iterator);
	 * // => true
	 *
	 * _.isSymbol('abc');
	 * // => false
	 */

	function isSymbol$1(value) {
	  return typeof value == 'symbol' || isObjectLike(value) && baseGetTag(value) == symbolTag;
	}

	var isSymbol_1 = isSymbol$1;

	var Symbol = _Symbol,
	    arrayMap = _arrayMap,
	    isArray = isArray_1,
	    isSymbol = isSymbol_1;
	/** Used as references for various \`Number\` constants. */

	var INFINITY = 1 / 0;
	/** Used to convert symbols to primitives and strings. */

	var symbolProto = Symbol ? Symbol.prototype : undefined,
	    symbolToString = symbolProto ? symbolProto.toString : undefined;
	/**
	 * The base implementation of \`_.toString\` which doesn't convert nullish
	 * values to empty strings.
	 *
	 * @private
	 * @param {*} value The value to process.
	 * @returns {string} Returns the string.
	 */

	function baseToString$1(value) {
	  // Exit early for strings to avoid a performance hit in some environments.
	  if (typeof value == 'string') {
	    return value;
	  }

	  if (isArray(value)) {
	    // Recursively convert values (susceptible to call stack limits).
	    return arrayMap(value, baseToString$1) + '';
	  }

	  if (isSymbol(value)) {
	    return symbolToString ? symbolToString.call(value) : '';
	  }

	  var result = value + '';
	  return result == '0' && 1 / value == -INFINITY ? '-0' : result;
	}

	var _baseToString = baseToString$1;

	var baseToString = _baseToString;
	/**
	 * Converts \`value\` to a string. An empty string is returned for \`null\`
	 * and \`undefined\` values. The sign of \`-0\` is preserved.
	 *
	 * @static
	 * @memberOf _
	 * @since 4.0.0
	 * @category Lang
	 * @param {*} value The value to convert.
	 * @returns {string} Returns the converted string.
	 * @example
	 *
	 * _.toString(null);
	 * // => ''
	 *
	 * _.toString(-0);
	 * // => '-0'
	 *
	 * _.toString([1, 2, 3]);
	 * // => '1,2,3'
	 */

	function toString$4(value) {
	  return value == null ? '' : baseToString(value);
	}

	var toString_1 = toString$4;

	/**
	 * The base implementation of \`_.slice\` without an iteratee call guard.
	 *
	 * @private
	 * @param {Array} array The array to slice.
	 * @param {number} [start=0] The start position.
	 * @param {number} [end=array.length] The end position.
	 * @returns {Array} Returns the slice of \`array\`.
	 */

	function baseSlice$1(array, start, end) {
	  var index = -1,
	      length = array.length;

	  if (start < 0) {
	    start = -start > length ? 0 : length + start;
	  }

	  end = end > length ? length : end;

	  if (end < 0) {
	    end += length;
	  }

	  length = start > end ? 0 : end - start >>> 0;
	  start >>>= 0;
	  var result = Array(length);

	  while (++index < length) {
	    result[index] = array[index + start];
	  }

	  return result;
	}

	var _baseSlice = baseSlice$1;

	var baseSlice = _baseSlice;
	/**
	 * Casts \`array\` to a slice if it's needed.
	 *
	 * @private
	 * @param {Array} array The array to inspect.
	 * @param {number} start The start position.
	 * @param {number} [end=array.length] The end position.
	 * @returns {Array} Returns the cast slice.
	 */

	function castSlice$1(array, start, end) {
	  var length = array.length;
	  end = end === undefined ? length : end;
	  return !start && end >= length ? array : baseSlice(array, start, end);
	}

	var _castSlice = castSlice$1;

	/** Used to compose unicode character classes. */
	var rsAstralRange$2 = '\\\\\\\\ud800-\\\\\\\\udfff',
	    rsComboMarksRange$3 = '\\\\\\\\u0300-\\\\\\\\u036f',
	    reComboHalfMarksRange$3 = '\\\\\\\\ufe20-\\\\\\\\ufe2f',
	    rsComboSymbolsRange$3 = '\\\\\\\\u20d0-\\\\\\\\u20ff',
	    rsComboRange$3 = rsComboMarksRange$3 + reComboHalfMarksRange$3 + rsComboSymbolsRange$3,
	    rsVarRange$2 = '\\\\\\\\ufe0e\\\\\\\\ufe0f';
	/** Used to compose unicode capture groups. */

	var rsZWJ$2 = '\\\\\\\\u200d';
	/** Used to detect strings with [zero-width joiners or code points from the astral planes](http://eev.ee/blog/2015/09/12/dark-corners-of-unicode/). */

	var reHasUnicode = RegExp('[' + rsZWJ$2 + rsAstralRange$2 + rsComboRange$3 + rsVarRange$2 + ']');
	/**
	 * Checks if \`string\` contains Unicode symbols.
	 *
	 * @private
	 * @param {string} string The string to inspect.
	 * @returns {boolean} Returns \`true\` if a symbol is found, else \`false\`.
	 */

	function hasUnicode$2(string) {
	  return reHasUnicode.test(string);
	}

	var _hasUnicode = hasUnicode$2;

	/**
	 * Converts an ASCII \`string\` to an array.
	 *
	 * @private
	 * @param {string} string The string to convert.
	 * @returns {Array} Returns the converted array.
	 */

	function asciiToArray$1(string) {
	  return string.split('');
	}

	var _asciiToArray = asciiToArray$1;

	/** Used to compose unicode character classes. */
	var rsAstralRange$1 = '\\\\\\\\ud800-\\\\\\\\udfff',
	    rsComboMarksRange$2 = '\\\\\\\\u0300-\\\\\\\\u036f',
	    reComboHalfMarksRange$2 = '\\\\\\\\ufe20-\\\\\\\\ufe2f',
	    rsComboSymbolsRange$2 = '\\\\\\\\u20d0-\\\\\\\\u20ff',
	    rsComboRange$2 = rsComboMarksRange$2 + reComboHalfMarksRange$2 + rsComboSymbolsRange$2,
	    rsVarRange$1 = '\\\\\\\\ufe0e\\\\\\\\ufe0f';
	/** Used to compose unicode capture groups. */

	var rsAstral = '[' + rsAstralRange$1 + ']',
	    rsCombo$2 = '[' + rsComboRange$2 + ']',
	    rsFitz$1 = '\\\\\\\\ud83c[\\\\\\\\udffb-\\\\\\\\udfff]',
	    rsModifier$1 = '(?:' + rsCombo$2 + '|' + rsFitz$1 + ')',
	    rsNonAstral$1 = '[^' + rsAstralRange$1 + ']',
	    rsRegional$1 = '(?:\\\\\\\\ud83c[\\\\\\\\udde6-\\\\\\\\uddff]){2}',
	    rsSurrPair$1 = '[\\\\\\\\ud800-\\\\\\\\udbff][\\\\\\\\udc00-\\\\\\\\udfff]',
	    rsZWJ$1 = '\\\\\\\\u200d';
	/** Used to compose unicode regexes. */

	var reOptMod$1 = rsModifier$1 + '?',
	    rsOptVar$1 = '[' + rsVarRange$1 + ']?',
	    rsOptJoin$1 = '(?:' + rsZWJ$1 + '(?:' + [rsNonAstral$1, rsRegional$1, rsSurrPair$1].join('|') + ')' + rsOptVar$1 + reOptMod$1 + ')*',
	    rsSeq$1 = rsOptVar$1 + reOptMod$1 + rsOptJoin$1,
	    rsSymbol = '(?:' + [rsNonAstral$1 + rsCombo$2 + '?', rsCombo$2, rsRegional$1, rsSurrPair$1, rsAstral].join('|') + ')';
	/** Used to match [string symbols](https://mathiasbynens.be/notes/javascript-unicode). */

	var reUnicode = RegExp(rsFitz$1 + '(?=' + rsFitz$1 + ')|' + rsSymbol + rsSeq$1, 'g');
	/**
	 * Converts a Unicode \`string\` to an array.
	 *
	 * @private
	 * @param {string} string The string to convert.
	 * @returns {Array} Returns the converted array.
	 */

	function unicodeToArray$1(string) {
	  return string.match(reUnicode) || [];
	}

	var _unicodeToArray = unicodeToArray$1;

	var asciiToArray = _asciiToArray,
	    hasUnicode$1 = _hasUnicode,
	    unicodeToArray = _unicodeToArray;
	/**
	 * Converts \`string\` to an array.
	 *
	 * @private
	 * @param {string} string The string to convert.
	 * @returns {Array} Returns the converted array.
	 */

	function stringToArray$1(string) {
	  return hasUnicode$1(string) ? unicodeToArray(string) : asciiToArray(string);
	}

	var _stringToArray = stringToArray$1;

	var castSlice = _castSlice,
	    hasUnicode = _hasUnicode,
	    stringToArray = _stringToArray,
	    toString$3 = toString_1;
	/**
	 * Creates a function like \`_.lowerFirst\`.
	 *
	 * @private
	 * @param {string} methodName The name of the \`String\` case method to use.
	 * @returns {Function} Returns the new case function.
	 */

	function createCaseFirst$1(methodName) {
	  return function (string) {
	    string = toString$3(string);
	    var strSymbols = hasUnicode(string) ? stringToArray(string) : undefined;
	    var chr = strSymbols ? strSymbols[0] : string.charAt(0);
	    var trailing = strSymbols ? castSlice(strSymbols, 1).join('') : string.slice(1);
	    return chr[methodName]() + trailing;
	  };
	}

	var _createCaseFirst = createCaseFirst$1;

	var createCaseFirst = _createCaseFirst;
	/**
	 * Converts the first character of \`string\` to upper case.
	 *
	 * @static
	 * @memberOf _
	 * @since 4.0.0
	 * @category String
	 * @param {string} [string=''] The string to convert.
	 * @returns {string} Returns the converted string.
	 * @example
	 *
	 * _.upperFirst('fred');
	 * // => 'Fred'
	 *
	 * _.upperFirst('FRED');
	 * // => 'FRED'
	 */

	var upperFirst$1 = createCaseFirst('toUpperCase');
	var upperFirst_1 = upperFirst$1;

	var toString$2 = toString_1,
	    upperFirst = upperFirst_1;
	/**
	 * Converts the first character of \`string\` to upper case and the remaining
	 * to lower case.
	 *
	 * @static
	 * @memberOf _
	 * @since 3.0.0
	 * @category String
	 * @param {string} [string=''] The string to capitalize.
	 * @returns {string} Returns the capitalized string.
	 * @example
	 *
	 * _.capitalize('FRED');
	 * // => 'Fred'
	 */

	function capitalize$1(string) {
	  return upperFirst(toString$2(string).toLowerCase());
	}

	var capitalize_1 = capitalize$1;

	/**
	 * A specialized version of \`_.reduce\` for arrays without support for
	 * iteratee shorthands.
	 *
	 * @private
	 * @param {Array} [array] The array to iterate over.
	 * @param {Function} iteratee The function invoked per iteration.
	 * @param {*} [accumulator] The initial value.
	 * @param {boolean} [initAccum] Specify using the first element of \`array\` as
	 *  the initial value.
	 * @returns {*} Returns the accumulated value.
	 */

	function arrayReduce$1(array, iteratee, accumulator, initAccum) {
	  var index = -1,
	      length = array == null ? 0 : array.length;

	  if (initAccum && length) {
	    accumulator = array[++index];
	  }

	  while (++index < length) {
	    accumulator = iteratee(accumulator, array[index], index, array);
	  }

	  return accumulator;
	}

	var _arrayReduce = arrayReduce$1;

	/**
	 * The base implementation of \`_.propertyOf\` without support for deep paths.
	 *
	 * @private
	 * @param {Object} object The object to query.
	 * @returns {Function} Returns the new accessor function.
	 */

	function basePropertyOf$1(object) {
	  return function (key) {
	    return object == null ? undefined : object[key];
	  };
	}

	var _basePropertyOf = basePropertyOf$1;

	var basePropertyOf = _basePropertyOf;
	/** Used to map Latin Unicode letters to basic Latin letters. */

	var deburredLetters = {
	  // Latin-1 Supplement block.
	  '\\\\xc0': 'A',
	  '\\\\xc1': 'A',
	  '\\\\xc2': 'A',
	  '\\\\xc3': 'A',
	  '\\\\xc4': 'A',
	  '\\\\xc5': 'A',
	  '\\\\xe0': 'a',
	  '\\\\xe1': 'a',
	  '\\\\xe2': 'a',
	  '\\\\xe3': 'a',
	  '\\\\xe4': 'a',
	  '\\\\xe5': 'a',
	  '\\\\xc7': 'C',
	  '\\\\xe7': 'c',
	  '\\\\xd0': 'D',
	  '\\\\xf0': 'd',
	  '\\\\xc8': 'E',
	  '\\\\xc9': 'E',
	  '\\\\xca': 'E',
	  '\\\\xcb': 'E',
	  '\\\\xe8': 'e',
	  '\\\\xe9': 'e',
	  '\\\\xea': 'e',
	  '\\\\xeb': 'e',
	  '\\\\xcc': 'I',
	  '\\\\xcd': 'I',
	  '\\\\xce': 'I',
	  '\\\\xcf': 'I',
	  '\\\\xec': 'i',
	  '\\\\xed': 'i',
	  '\\\\xee': 'i',
	  '\\\\xef': 'i',
	  '\\\\xd1': 'N',
	  '\\\\xf1': 'n',
	  '\\\\xd2': 'O',
	  '\\\\xd3': 'O',
	  '\\\\xd4': 'O',
	  '\\\\xd5': 'O',
	  '\\\\xd6': 'O',
	  '\\\\xd8': 'O',
	  '\\\\xf2': 'o',
	  '\\\\xf3': 'o',
	  '\\\\xf4': 'o',
	  '\\\\xf5': 'o',
	  '\\\\xf6': 'o',
	  '\\\\xf8': 'o',
	  '\\\\xd9': 'U',
	  '\\\\xda': 'U',
	  '\\\\xdb': 'U',
	  '\\\\xdc': 'U',
	  '\\\\xf9': 'u',
	  '\\\\xfa': 'u',
	  '\\\\xfb': 'u',
	  '\\\\xfc': 'u',
	  '\\\\xdd': 'Y',
	  '\\\\xfd': 'y',
	  '\\\\xff': 'y',
	  '\\\\xc6': 'Ae',
	  '\\\\xe6': 'ae',
	  '\\\\xde': 'Th',
	  '\\\\xfe': 'th',
	  '\\\\xdf': 'ss',
	  // Latin Extended-A block.
	  '\\\\u0100': 'A',
	  '\\\\u0102': 'A',
	  '\\\\u0104': 'A',
	  '\\\\u0101': 'a',
	  '\\\\u0103': 'a',
	  '\\\\u0105': 'a',
	  '\\\\u0106': 'C',
	  '\\\\u0108': 'C',
	  '\\\\u010a': 'C',
	  '\\\\u010c': 'C',
	  '\\\\u0107': 'c',
	  '\\\\u0109': 'c',
	  '\\\\u010b': 'c',
	  '\\\\u010d': 'c',
	  '\\\\u010e': 'D',
	  '\\\\u0110': 'D',
	  '\\\\u010f': 'd',
	  '\\\\u0111': 'd',
	  '\\\\u0112': 'E',
	  '\\\\u0114': 'E',
	  '\\\\u0116': 'E',
	  '\\\\u0118': 'E',
	  '\\\\u011a': 'E',
	  '\\\\u0113': 'e',
	  '\\\\u0115': 'e',
	  '\\\\u0117': 'e',
	  '\\\\u0119': 'e',
	  '\\\\u011b': 'e',
	  '\\\\u011c': 'G',
	  '\\\\u011e': 'G',
	  '\\\\u0120': 'G',
	  '\\\\u0122': 'G',
	  '\\\\u011d': 'g',
	  '\\\\u011f': 'g',
	  '\\\\u0121': 'g',
	  '\\\\u0123': 'g',
	  '\\\\u0124': 'H',
	  '\\\\u0126': 'H',
	  '\\\\u0125': 'h',
	  '\\\\u0127': 'h',
	  '\\\\u0128': 'I',
	  '\\\\u012a': 'I',
	  '\\\\u012c': 'I',
	  '\\\\u012e': 'I',
	  '\\\\u0130': 'I',
	  '\\\\u0129': 'i',
	  '\\\\u012b': 'i',
	  '\\\\u012d': 'i',
	  '\\\\u012f': 'i',
	  '\\\\u0131': 'i',
	  '\\\\u0134': 'J',
	  '\\\\u0135': 'j',
	  '\\\\u0136': 'K',
	  '\\\\u0137': 'k',
	  '\\\\u0138': 'k',
	  '\\\\u0139': 'L',
	  '\\\\u013b': 'L',
	  '\\\\u013d': 'L',
	  '\\\\u013f': 'L',
	  '\\\\u0141': 'L',
	  '\\\\u013a': 'l',
	  '\\\\u013c': 'l',
	  '\\\\u013e': 'l',
	  '\\\\u0140': 'l',
	  '\\\\u0142': 'l',
	  '\\\\u0143': 'N',
	  '\\\\u0145': 'N',
	  '\\\\u0147': 'N',
	  '\\\\u014a': 'N',
	  '\\\\u0144': 'n',
	  '\\\\u0146': 'n',
	  '\\\\u0148': 'n',
	  '\\\\u014b': 'n',
	  '\\\\u014c': 'O',
	  '\\\\u014e': 'O',
	  '\\\\u0150': 'O',
	  '\\\\u014d': 'o',
	  '\\\\u014f': 'o',
	  '\\\\u0151': 'o',
	  '\\\\u0154': 'R',
	  '\\\\u0156': 'R',
	  '\\\\u0158': 'R',
	  '\\\\u0155': 'r',
	  '\\\\u0157': 'r',
	  '\\\\u0159': 'r',
	  '\\\\u015a': 'S',
	  '\\\\u015c': 'S',
	  '\\\\u015e': 'S',
	  '\\\\u0160': 'S',
	  '\\\\u015b': 's',
	  '\\\\u015d': 's',
	  '\\\\u015f': 's',
	  '\\\\u0161': 's',
	  '\\\\u0162': 'T',
	  '\\\\u0164': 'T',
	  '\\\\u0166': 'T',
	  '\\\\u0163': 't',
	  '\\\\u0165': 't',
	  '\\\\u0167': 't',
	  '\\\\u0168': 'U',
	  '\\\\u016a': 'U',
	  '\\\\u016c': 'U',
	  '\\\\u016e': 'U',
	  '\\\\u0170': 'U',
	  '\\\\u0172': 'U',
	  '\\\\u0169': 'u',
	  '\\\\u016b': 'u',
	  '\\\\u016d': 'u',
	  '\\\\u016f': 'u',
	  '\\\\u0171': 'u',
	  '\\\\u0173': 'u',
	  '\\\\u0174': 'W',
	  '\\\\u0175': 'w',
	  '\\\\u0176': 'Y',
	  '\\\\u0177': 'y',
	  '\\\\u0178': 'Y',
	  '\\\\u0179': 'Z',
	  '\\\\u017b': 'Z',
	  '\\\\u017d': 'Z',
	  '\\\\u017a': 'z',
	  '\\\\u017c': 'z',
	  '\\\\u017e': 'z',
	  '\\\\u0132': 'IJ',
	  '\\\\u0133': 'ij',
	  '\\\\u0152': 'Oe',
	  '\\\\u0153': 'oe',
	  '\\\\u0149': \\"'n\\",
	  '\\\\u017f': 's'
	};
	/**
	 * Used by \`_.deburr\` to convert Latin-1 Supplement and Latin Extended-A
	 * letters to basic Latin letters.
	 *
	 * @private
	 * @param {string} letter The matched letter to deburr.
	 * @returns {string} Returns the deburred letter.
	 */

	var deburrLetter$1 = basePropertyOf(deburredLetters);
	var _deburrLetter = deburrLetter$1;

	var deburrLetter = _deburrLetter,
	    toString$1 = toString_1;
	/** Used to match Latin Unicode letters (excluding mathematical operators). */

	var reLatin = /[\\\\xc0-\\\\xd6\\\\xd8-\\\\xf6\\\\xf8-\\\\xff\\\\u0100-\\\\u017f]/g;
	/** Used to compose unicode character classes. */

	var rsComboMarksRange$1 = '\\\\\\\\u0300-\\\\\\\\u036f',
	    reComboHalfMarksRange$1 = '\\\\\\\\ufe20-\\\\\\\\ufe2f',
	    rsComboSymbolsRange$1 = '\\\\\\\\u20d0-\\\\\\\\u20ff',
	    rsComboRange$1 = rsComboMarksRange$1 + reComboHalfMarksRange$1 + rsComboSymbolsRange$1;
	/** Used to compose unicode capture groups. */

	var rsCombo$1 = '[' + rsComboRange$1 + ']';
	/**
	 * Used to match [combining diacritical marks](https://en.wikipedia.org/wiki/Combining_Diacritical_Marks) and
	 * [combining diacritical marks for symbols](https://en.wikipedia.org/wiki/Combining_Diacritical_Marks_for_Symbols).
	 */

	var reComboMark = RegExp(rsCombo$1, 'g');
	/**
	 * Deburrs \`string\` by converting
	 * [Latin-1 Supplement](https://en.wikipedia.org/wiki/Latin-1_Supplement_(Unicode_block)#Character_table)
	 * and [Latin Extended-A](https://en.wikipedia.org/wiki/Latin_Extended-A)
	 * letters to basic Latin letters and removing
	 * [combining diacritical marks](https://en.wikipedia.org/wiki/Combining_Diacritical_Marks).
	 *
	 * @static
	 * @memberOf _
	 * @since 3.0.0
	 * @category String
	 * @param {string} [string=''] The string to deburr.
	 * @returns {string} Returns the deburred string.
	 * @example
	 *
	 * _.deburr('déjà vu');
	 * // => 'deja vu'
	 */

	function deburr$1(string) {
	  string = toString$1(string);
	  return string && string.replace(reLatin, deburrLetter).replace(reComboMark, '');
	}

	var deburr_1 = deburr$1;

	/** Used to match words composed of alphanumeric characters. */
	var reAsciiWord = /[^\\\\x00-\\\\x2f\\\\x3a-\\\\x40\\\\x5b-\\\\x60\\\\x7b-\\\\x7f]+/g;
	/**
	 * Splits an ASCII \`string\` into an array of its words.
	 *
	 * @private
	 * @param {string} The string to inspect.
	 * @returns {Array} Returns the words of \`string\`.
	 */

	function asciiWords$1(string) {
	  return string.match(reAsciiWord) || [];
	}

	var _asciiWords = asciiWords$1;

	/** Used to detect strings that need a more robust regexp to match words. */
	var reHasUnicodeWord = /[a-z][A-Z]|[A-Z]{2}[a-z]|[0-9][a-zA-Z]|[a-zA-Z][0-9]|[^a-zA-Z0-9 ]/;
	/**
	 * Checks if \`string\` contains a word composed of Unicode symbols.
	 *
	 * @private
	 * @param {string} string The string to inspect.
	 * @returns {boolean} Returns \`true\` if a word is found, else \`false\`.
	 */

	function hasUnicodeWord$1(string) {
	  return reHasUnicodeWord.test(string);
	}

	var _hasUnicodeWord = hasUnicodeWord$1;

	/** Used to compose unicode character classes. */
	var rsAstralRange = '\\\\\\\\ud800-\\\\\\\\udfff',
	    rsComboMarksRange = '\\\\\\\\u0300-\\\\\\\\u036f',
	    reComboHalfMarksRange = '\\\\\\\\ufe20-\\\\\\\\ufe2f',
	    rsComboSymbolsRange = '\\\\\\\\u20d0-\\\\\\\\u20ff',
	    rsComboRange = rsComboMarksRange + reComboHalfMarksRange + rsComboSymbolsRange,
	    rsDingbatRange = '\\\\\\\\u2700-\\\\\\\\u27bf',
	    rsLowerRange = 'a-z\\\\\\\\xdf-\\\\\\\\xf6\\\\\\\\xf8-\\\\\\\\xff',
	    rsMathOpRange = '\\\\\\\\xac\\\\\\\\xb1\\\\\\\\xd7\\\\\\\\xf7',
	    rsNonCharRange = '\\\\\\\\x00-\\\\\\\\x2f\\\\\\\\x3a-\\\\\\\\x40\\\\\\\\x5b-\\\\\\\\x60\\\\\\\\x7b-\\\\\\\\xbf',
	    rsPunctuationRange = '\\\\\\\\u2000-\\\\\\\\u206f',
	    rsSpaceRange = ' \\\\\\\\t\\\\\\\\x0b\\\\\\\\f\\\\\\\\xa0\\\\\\\\ufeff\\\\\\\\n\\\\\\\\r\\\\\\\\u2028\\\\\\\\u2029\\\\\\\\u1680\\\\\\\\u180e\\\\\\\\u2000\\\\\\\\u2001\\\\\\\\u2002\\\\\\\\u2003\\\\\\\\u2004\\\\\\\\u2005\\\\\\\\u2006\\\\\\\\u2007\\\\\\\\u2008\\\\\\\\u2009\\\\\\\\u200a\\\\\\\\u202f\\\\\\\\u205f\\\\\\\\u3000',
	    rsUpperRange = 'A-Z\\\\\\\\xc0-\\\\\\\\xd6\\\\\\\\xd8-\\\\\\\\xde',
	    rsVarRange = '\\\\\\\\ufe0e\\\\\\\\ufe0f',
	    rsBreakRange = rsMathOpRange + rsNonCharRange + rsPunctuationRange + rsSpaceRange;
	/** Used to compose unicode capture groups. */

	var rsApos$1 = \\"['\\\\u2019]\\",
	    rsBreak = '[' + rsBreakRange + ']',
	    rsCombo = '[' + rsComboRange + ']',
	    rsDigits = '\\\\\\\\d+',
	    rsDingbat = '[' + rsDingbatRange + ']',
	    rsLower = '[' + rsLowerRange + ']',
	    rsMisc = '[^' + rsAstralRange + rsBreakRange + rsDigits + rsDingbatRange + rsLowerRange + rsUpperRange + ']',
	    rsFitz = '\\\\\\\\ud83c[\\\\\\\\udffb-\\\\\\\\udfff]',
	    rsModifier = '(?:' + rsCombo + '|' + rsFitz + ')',
	    rsNonAstral = '[^' + rsAstralRange + ']',
	    rsRegional = '(?:\\\\\\\\ud83c[\\\\\\\\udde6-\\\\\\\\uddff]){2}',
	    rsSurrPair = '[\\\\\\\\ud800-\\\\\\\\udbff][\\\\\\\\udc00-\\\\\\\\udfff]',
	    rsUpper = '[' + rsUpperRange + ']',
	    rsZWJ = '\\\\\\\\u200d';
	/** Used to compose unicode regexes. */

	var rsMiscLower = '(?:' + rsLower + '|' + rsMisc + ')',
	    rsMiscUpper = '(?:' + rsUpper + '|' + rsMisc + ')',
	    rsOptContrLower = '(?:' + rsApos$1 + '(?:d|ll|m|re|s|t|ve))?',
	    rsOptContrUpper = '(?:' + rsApos$1 + '(?:D|LL|M|RE|S|T|VE))?',
	    reOptMod = rsModifier + '?',
	    rsOptVar = '[' + rsVarRange + ']?',
	    rsOptJoin = '(?:' + rsZWJ + '(?:' + [rsNonAstral, rsRegional, rsSurrPair].join('|') + ')' + rsOptVar + reOptMod + ')*',
	    rsOrdLower = '\\\\\\\\d*(?:1st|2nd|3rd|(?![123])\\\\\\\\dth)(?=\\\\\\\\b|[A-Z_])',
	    rsOrdUpper = '\\\\\\\\d*(?:1ST|2ND|3RD|(?![123])\\\\\\\\dTH)(?=\\\\\\\\b|[a-z_])',
	    rsSeq = rsOptVar + reOptMod + rsOptJoin,
	    rsEmoji = '(?:' + [rsDingbat, rsRegional, rsSurrPair].join('|') + ')' + rsSeq;
	/** Used to match complex or compound words. */

	var reUnicodeWord = RegExp([rsUpper + '?' + rsLower + '+' + rsOptContrLower + '(?=' + [rsBreak, rsUpper, '$'].join('|') + ')', rsMiscUpper + '+' + rsOptContrUpper + '(?=' + [rsBreak, rsUpper + rsMiscLower, '$'].join('|') + ')', rsUpper + '?' + rsMiscLower + '+' + rsOptContrLower, rsUpper + '+' + rsOptContrUpper, rsOrdUpper, rsOrdLower, rsDigits, rsEmoji].join('|'), 'g');
	/**
	 * Splits a Unicode \`string\` into an array of its words.
	 *
	 * @private
	 * @param {string} The string to inspect.
	 * @returns {Array} Returns the words of \`string\`.
	 */

	function unicodeWords$1(string) {
	  return string.match(reUnicodeWord) || [];
	}

	var _unicodeWords = unicodeWords$1;

	var asciiWords = _asciiWords,
	    hasUnicodeWord = _hasUnicodeWord,
	    toString = toString_1,
	    unicodeWords = _unicodeWords;
	/**
	 * Splits \`string\` into an array of its words.
	 *
	 * @static
	 * @memberOf _
	 * @since 3.0.0
	 * @category String
	 * @param {string} [string=''] The string to inspect.
	 * @param {RegExp|string} [pattern] The pattern to match words.
	 * @param- {Object} [guard] Enables use as an iteratee for methods like \`_.map\`.
	 * @returns {Array} Returns the words of \`string\`.
	 * @example
	 *
	 * _.words('fred, barney, & pebbles');
	 * // => ['fred', 'barney', 'pebbles']
	 *
	 * _.words('fred, barney, & pebbles', /[^, ]+/g);
	 * // => ['fred', 'barney', '&', 'pebbles']
	 */

	function words$1(string, pattern, guard) {
	  string = toString(string);
	  pattern = guard ? undefined : pattern;

	  if (pattern === undefined) {
	    return hasUnicodeWord(string) ? unicodeWords(string) : asciiWords(string);
	  }

	  return string.match(pattern) || [];
	}

	var words_1 = words$1;

	var arrayReduce = _arrayReduce,
	    deburr = deburr_1,
	    words = words_1;
	/** Used to compose unicode capture groups. */

	var rsApos = \\"['\\\\u2019]\\";
	/** Used to match apostrophes. */

	var reApos = RegExp(rsApos, 'g');
	/**
	 * Creates a function like \`_.camelCase\`.
	 *
	 * @private
	 * @param {Function} callback The function to combine each word.
	 * @returns {Function} Returns the new compounder function.
	 */

	function createCompounder$1(callback) {
	  return function (string) {
	    return arrayReduce(words(deburr(string).replace(reApos, '')), callback, '');
	  };
	}

	var _createCompounder = createCompounder$1;

	var capitalize = capitalize_1,
	    createCompounder = _createCompounder;
	/**
	 * Converts \`string\` to [camel case](https://en.wikipedia.org/wiki/CamelCase).
	 *
	 * @static
	 * @memberOf _
	 * @since 3.0.0
	 * @category String
	 * @param {string} [string=''] The string to convert.
	 * @returns {string} Returns the camel cased string.
	 * @example
	 *
	 * _.camelCase('Foo Bar');
	 * // => 'fooBar'
	 *
	 * _.camelCase('--foo-bar--');
	 * // => 'fooBar'
	 *
	 * _.camelCase('__FOO_BAR__');
	 * // => 'fooBar'
	 */

	var camelCase = createCompounder(function (result, word, index) {
	  word = word.toLowerCase();
	  return result + (index ? capitalize(word) : word);
	});
	var camelCase_1 = camelCase;

	function makeCamelCase(string) {
	  return camelCase_1(string);
	}

	exports.makeCamelCase = makeCamelCase;

	Object.defineProperty(exports, '__esModule', { value: true });

}));
//# sourceMappingURL=index.umd.js.map
"
`;
